change ads size

--- a/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html
+++ b/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html
@@ -239,32 +239,15 @@ data-ad-slot="5275186684">
   </ol>
   <div><amp-img alt="Nguyên lý Bảo hiểm Nhân thọ Liên kết chung" src="/images/BHNTLKC.jpg" width="1086" height="549" layout="responsive"></amp-img><br>Nguyên lý Bảo hiểm Nhân thọ Liên kết chung</div>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Hợp đồng bảo hiểm nhân thọ truyền thống chỉ bắt đầu có <a href="phi-bao-hiem-nhan-tho">giá trị hoàn lại và bảo tức</a> sau khi đóng phí hơn một năm. Giá trị hoàn lại và bảo tức trong những năm đầu rất nhỏ so với phí đóng vào. Do đó người ta thường nói huỷ hợp đồng bảo hiểm trong những năm đầu thì lỗ nặng.
   <br>Mỗi hợp đồng bảo hiểm nhân thọ liên kết chung có một tài khoản tiền. Tài khoản đó <span class="tmark">có tiền ngay</span> khi hợp đồng có hiệu lực, số tiền ban đầu cũng đáng kể so với phí đã đóng. Tiền trong tài khoản sinh lời tương đương hoặc cao hơn lãi suất tiết kiệm 12 tháng ở ngân hàng, tiền lời nhập vốn mỗi tháng (làm cho <span class="tmark">lợi nhuận thực tế cao hơn</span>). Tài khoản bảo hiểm nhân thọ liên kết chung cũng được sinh lời như một <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a> trái phiếu. Mỗi tháng tài khoản phải chi một số tiền vài chục ngàn cho phí quản lý hợp đồng và để có số tiền bảo hiểm hàng trăm triệu đồng. Khách hàng có thể gửi thêm tiền vào tài khoản để nhận tiền lời. Khi <i><span class="tmark">thật cần tiền</span></i>, khách hàng cũng có thể rút tiền ra hoặc vay tiền tới 80% giá trị tài khoản. Khách hàng nên tham khảo tư vấn viên để quyết định chọn vay hay rút tiền từ tài khoản để có lợi nhất.</p>
@@ -275,32 +258,15 @@ data-ad-slot="3830899615">
     <li>Khi lãi suất của bảo hiểm nhân thọ liên kết chung <a href="../tich-luy">không lớn hơn trượt giá</a>, nếu khách hàng có cách sinh lợi an toàn và lãi suất cao hơn thì có thể rút tiền từ hợp đồng bảo hiểm nhân thọ liên kết chung ra dễ dàng và vẫn duy trì sự bảo vệ tài chính.</li>
   </ol>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Hợp đồng bảo hiểm nhân thọ truyền thống được tính sẵn sao cho số tiền bảo hiểm gần bằng giá trị hoàn lại (như vậy khách hàng chắc chắn sẽ có số tiền đã định), tỉ lệ giữa số tiền đó và phí đóng hàng năm do chương trình máy tính định sẵn và phí đóng vào không đổi suốt thời hạn hợp đồng.
   <br>Hợp đồng bảo hiểm nhân thọ liên kết chung không có ràng buộc như vậy, khách hàng được chọn và được thay đổi tỉ lệ giữa số tiền bảo hiểm trên phí đóng vào. Khách hàng có thể chọn số tiền bảo hiểm cao, phí đóng thấp để hợp đồng có <span class="tmark">tính bảo vệ cao</span>. Khách hàng có thể chọn số tiền bảo hiểm thấp, phí đóng cao để hợp đồng có <span class="tmark">tính tích luỹ cao</span>. Giữa hai thái cực đó, khách hàng có thể chọn những tỉ lệ thích hợp cho gia đình mình trong <a href="../cac-giai-doan">từng giai đoạn</a>. Có thể nói rằng <i>không có dịch vụ nào thay thế được bảo hiểm nhân thọ về mặt bảo vệ tài chính</i> và cũng <i>ít có dịch vụ nào tốt hơn bảo hiểm nhân thọ về mặt tích luỹ tài sản dài hạn</i>.
@@ -312,32 +278,15 @@ data-ad-slot="3830899615">
   </ol>
   <p>Khi hợp đồng bảo hiểm nhân thọ liên kết chung đã được hơn một năm, khách hàng có thể tạm ngưng đóng phí những lúc kẹt tiền, mà vẫn được bảo vệ tài chính nếu tài khoản vẫn còn tiền.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p><b>Kết luận:</b></p>
   <div class="flright"><amp-img alt="Manulife Gia Đình Tôi Yêu" src="/images/GDTY.svg" width="400" height="300" layout="responsive"></amp-img></a></div>
@@ -356,32 +305,15 @@ data-ad-slot="3830899615">
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132804613009051648" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376045612561053" rel="nofollow" target="_blank">Facebook</a></div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
