--- a/huu-ich/cau-chuyen/bat-dau-dau-tu.html
+++ b/huu-ich/cau-chuyen/bat-dau-dau-tu.html
@@ -229,32 +229,15 @@ data-ad-slot="5275186684">
   <p>Tại sao nhóm người này không đầu tư? Một số lý do đã được nêu ra trong các ý kiến và các bài viết khác về hiện tượng này. Một số người có thể cảm thấy họ không có đủ tiền để đầu tư, trong khi những người khác có thể sợ đầu tư. Nhưng bất kể lý do gì, dạy về đầu tư có thể giúp giải quyết một số những mối lo và hy vọng đưa nhiều người bắt đầu con đường đầu tư của họ - và điều này đặc biệt quan trọng với những người trẻ bởi vì họ được lợi nhiều nhất.</p>
   <p>Vậy họ cần phải học những gì?</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Bạn PHẢI đầu tư</h2>
   <p>Hãy nhìn bất cứ người nào trên 60 hoặc 70 xung quanh bạn. Họ sống thế nào? Rất có thể bạn sẽ nhìn thấy hoặc biết một số người sống chật vật, và những người khác đang sống tốt. Sự khác biệt giữa họ là gì? Câu trả lời khá chắc là, sự khác biệt giữa những người sống tốt và những người chật vật là một nhóm có đầu tư và nhóm kia thì không. Bạn muốn có tương lai nào trong hai tương lai trên? Chỉ có một cách để có được tương lai tốt là: Bạn phải đầu tư.</p>
@@ -266,32 +249,15 @@ data-ad-slot="3830899615">
   <p>Điều đó được gọi là sức mạnh của lãi kép - và đó là một điều tuyệt vời, nhưng nó cần thời gian để làm việc kỳ diệu của nó. Để có được đầy đủ giá trị của sự kỳ diệu, bạn phải bắt đầu sớm.</p>
   <p>Bạn lấy tiền từ đâu để đầu tư, đặc biệt là nếu bạn vẫn đang còn trẻ, thu nhập chưa cao? Tiền đầu tư phải đến từ việc chi tiêu ít hơn bạn kiếm được. Đó không phải là một câu trả lời bình thường, mà đó là câu trả lời duy nhất. Lựa chọn siết thắt lưng của bạn ngay bây giờ thì tốt hơn để đến khi bạn không có một sự lựa chọn sau này.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h3>Làm thế nào để bạn bắt đầu?</h3>
   <p>Chiến lược tốt nhất đã được biết tới nay là <b>trả tiền cho mình trước</b>. Điều đó có nghĩa là bạn cần phải dành riêng số tiền bạn quyết định đầu tư trước khi bạn phải trả cho bất cứ thứ gì khác (tiền thuê nhà cho tới các hóa đơn điện thoại di động). Và đây là một số cách để làm điều đó:</p>
@@ -304,32 +270,15 @@ data-ad-slot="3830899615">
   <p>Mọi nhà đầu tư thành công đều sẽ cho bạn biết một điều: đầu tư thành công là việc nhàm chán. Thành công đến từ sự kiên nhẫn, siêng năng và kiên trì hơn bất cứ thứ gì khác. Đặc biệt và năng nổ thường làm tăng chi phí cho bạn hơn là tăng tích luỹ cho bạn. Ngay cả Warren Buffett nổi tiếng thừa nhận rằng bí quyết thành công của ông là ông làm chủ "nghệ thuật không làm gì", cụm từ của ông nói về những việc đơn giản và kiên nhẫn. Tóm lại, để cho lãi kép làm công việc của mình bằng cách cho nó thời gian và đừng can thiệp đến nó.</p>
   <p>Như bạn có thể nhìn thấy từ biểu đồ trên, ngay cả khi bạn bắt đầu với các khoản đầu tư nhỏ, nó sẽ phát triển đến một số tiền khá lớn nếu bạn theo đúng lộ trình. Đầu tư không phải là khoa học tên lửa; nó là số tiền bạn trả cho mình trước trong mỗi tháng, thậm chí nếu bạn cần tiền gì đó trong ngắn hạn thì cũng phải trả cho mình trước.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h3>Nhận xét</h3>
   <p>Tại sao những người chưa trải qua một cuộc suy thoái lại không đầu tư? Có phải vì họ chưa thấy cảnh thiếu thốn?
@@ -353,32 +302,15 @@ data-ad-slot="3830899615">
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132815538449670144" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/636092159889729" rel="nofollow" target="_blank">Facebook</a></div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
