--- a/huu-ich/cau-chuyen/bot-lo-ve-tien.html
+++ b/huu-ich/cau-chuyen/bot-lo-ve-tien.html
@@ -236,32 +236,15 @@ data-ad-slot="5275186684">
   </ol>
   <p>Tình thế dần tốt hơn cho tôi - tốt hơn nhiều. Tuy nhiên, ngay cả khi tài sản của tôi đã tăng lên, tôi vẫn lo lắng về một ngày nào đó hết tiền. Thật là không hay, có tiền vẫn không giúp được gì (không phải là đánh giá thấp ý nghĩa của tiền) khi mà bạn vẫn ở trong một tình trạng liên tục sợ hãi về việc mất nó. Giảm sự sợ hãi đó là những gì tôi đã làm trong những năm gần đây, và tôi đã tìm thấy sáu điều giúp tôi ngừng lo lắng quá nhiều về tiền bạc.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>6 điều giúp tôi ngừng lo lắng về tiền bạc</h2>
   <p>Đây là sáu điều, không xếp theo thứ tự nào hết, mà tôi đã nhận ra là đã giúp tôi bớt lo ngại hơn về tiền bạc:</p>
@@ -275,32 +258,15 @@ data-ad-slot="3830899615">
   </ol>
   <p>Thật ra, tôi vẫn lo lắng về tiền bạc, nhưng nó đã đi từ trạng thái gần như liên tục đến một cái gì đó mà thoáng qua tâm trí của tôi trong một vài phút mỗi tháng. Thành công tài chính là khi càng nhiều điều nhận thức được hiện thực hoá, vì vậy học cách nhìn mối quan tâm về tiền bạc cho thích hợp là một bước quan trọng.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <h2>Bàn thêm</h2>
