--- a/huu-ich/cau-chuyen/nghi-huu-som.html
+++ b/huu-ich/cau-chuyen/nghi-huu-som.html
@@ -231,32 +231,15 @@ data-ad-slot="5275186684">
   <br>Anh bán căn nhà đi, thuê nhà ở gần chỗ làm, đi làm bằng xe đạp. Chi tiêu giảm xuống, anh ta có thể để dành được. Trong một kỳ hội thảo ở Bắc Kinh, anh gặp người vợ tương lai của mình, Winnie, đến từ Đài Loan, đang để dành được đến 50% thu nhập để đi du lịch. Bây giờ Jeremy 40 tuổi, Winnie 36 tuổi đã tự chủ tài chính, đi du lịch quanh thế giới, viết blog về cuộc sống đáng ghen tị của họ trên <a href="http://gocurrycracker.com/" target="_blank">GoCurryCracker.com</a>.
   <br>Dưới đây là câu chuyện về cách họ để dành đủ tiền để về hưu trước 40 tuổi (khi về hưu Jeremy 38 tuổi và Winnie 33 tuổi) và cách họ tiêu tiền và dùng thời gian sau đó.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <b>Anh chị đạt đến mục tiêu về hưu sớm như thế nào?</b>
   <p><u>Jeremy</u>: Khi tôi làm ở Motorola, mỗi xu của tôi đều dùng để trả nợ. Nếu tháng nào tôi dư 10$, tôi sẽ trả thêm 10$ vào khoản nợ tiền học. Tôi có để dành quỹ hưu trí tự nguyện <a href="/huu-ich/tich-luy#luonghuu">401(k)</a> nhưng tôi lại vay từ đó để mua nhà, khi tôi bán nhà để chuyển đến Seattle thì tôi trả món nợ đó.
@@ -269,32 +252,15 @@ data-ad-slot="3830899615">
   <br><u>Jeremy</u>: Chúng tôi cưới được 5 năm rồi, Winnie nghỉ làm và dọn đến Seattle sau khi cưới, nên khoảng 3-4 năm trước khi chúng tôi về hưu, lúc lương tôi đạt đến cao nhất thì cô ấy không đi làm.
   <br><u>Winnie</u>: Tôi là người ăn bám.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <b>Winnie, khi chị làm với Dell ở Đài Bắc, thói quen tiết kiệm của chị như thế nào?</b>
   <p><u>Winnie</u>: Mức sống ở đó rất rẻ nếu bạn muốn tiết kiệm, cho nên tôi có thể để dành được hơn nửa thu nhập.</p>
@@ -309,32 +275,15 @@ data-ad-slot="3830899615">
   <br><u>Jeremy</u>: Sau đó, chúng tôi nói chuyện với những huấn luyện viên lặn bị sa lầy ở các nước đang phát triển vì không kiếm đủ tiền để mua vé về nước.
   <br>Chúng tôi vào thư viện và đọc những sách về đầu tư, học được quy luật 4% (khoản tiền hưu trí đủ lớn để lợi tức 4% sinh ra đủ để sống mỗi năm thì sẽ ổn trong thời gian dài), thế là chúng tôi đặt ra kế hoạch nhiều bước. Ví dụ, chúng tôi có thể thấy khi khoản đầu tư đã đủ để sống ở Philippines. Sau đó, đủ để sống ở Thái Lan. Chúng tôi thực hiện đến khi đủ để sống ở Mỹ. Khoản đó bằng 25 lần chi tiêu hàng năm của chúng tôi.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <b>Cách sống của anh chị như thế nào? Và những người khác nghĩ gì về cách sống đó?</b>
   <p><u>Winnie</u>: Chúng tôi làm tiệc ở nhà theo kiểu góp (potluck), mỗi người đem một món đến rồi cùng ăn.
@@ -344,32 +293,15 @@ data-ad-slot="3830899615">
   <b>Chiến lược đầu tư của anh chị là gì?</b>
   <p><u>Jeremy</u>: Chúng tôi thay đổi hoài, phần lớn là các quỹ đầu tư theo chỉ số. Phần lớn tiền chúng tôi cho vào quỹ Vanguard Total Stock Market Index Fund và Vanguard Total International Stock Index Fund. Tôi đọc những tài liệu online về về hưu sớm, những lời khuyên của Jack Bogle và Warren Buffett về đầu tư chỉ số thụ động. Phân chia tài sản theo cách hiện đại: một phần nhỏ vào trái phiếu, một phần nhỏ vào các công ty đầu tư bất động sản, phần còn lại chia vào hai quỹ trên. Vì chúng tôi muốn có cuộc sống hưu hơn 60 năm, chúng tôi đầu tư phần lớn vào cổ phiếu để có lợi nhuận cao trong dài hạn.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <b>Khi khủng hoảng tài chính, kế hoạch của anh chị bị ảnh hưởng thế nào?</b>
   <p><u>Jeremy</u>: Trên giấy tờ thì chúng tôi lỗ mất 400 ngàn đô-la, nhưng tôi buồn là lúc đó không có nhiều tiền để mua thêm. Lúc đó tôi thấy cổ phiếu như là bán đổ bán tháo, và tôi muốn mua thêm. Lúc đó tôi vét hết tiền để mua, tôi còn nghĩ có nên vay tiền để mua không. Hai năm sau, chúng tôi giàu hơn nhiều so với lúc đầu. Bạn đừng sợ hãi bán hết cổ phiếu ở đáy để rút ra khỏi thị trường thì thị trường không ảnh hưởng đến bạn nhiều. Thậm chí, chúng ta còn mạnh hơn nữa. Có thể khủng hoảng có ảnh hưởng đến quyết định làm việc lâu hơn vài năm, một phần là dự án lúc đó cũng hay, một phần là tôi muốn vượt qua lúc thị trường xấu và tiết kiệm nhiều hơn.</p>
@@ -379,32 +311,15 @@ data-ad-slot="3830899615">
   <p><u>Winnie</u>: Ở Seattle chúng tôi cũng chỉ tiêu 40 ngàn mỗi năm.
   <br><u>Jeremy</u>: Chúng tôi tiêu ít hơn 3 ngàn mỗi tháng khi ở Mexico. Chúng tôi ở trong căn nhà 3 phòng ngủ ở trung tâm San Miguel de Allende. Chúng tôi suýt mua một căn nhà ở đó. Chúng tôi ăn tiệm hai-ba lần mỗi ngày, đi uống với bạn bè, thuê người làm vườn và dọn nhà, tất cả chỉ hết 2500 đô-la. Nếu sống như vậy ở Mỹ thì sẽ tốn hơn nhiều, nên chúng tôi phải thay đổi, không ra ngoài uống nữa. Không nên trả 15$ để uống một ly rượu, bạn có thể uống trong sân nhà. Nếu sống như vậy ở Manhattan thì còn tốn hơn nữa.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <b>Bây giờ anh chị có một thu nhập nào không?</b>
   <p>Năm ngoái, thu được từ trang blog 2000 đô-la. Đó là tiền quảng cáo, đủ để trả tiền thuê server. Ngoài ra, tất cả thu nhập của chúng tôi chỉ từ cổ tức và lãi. Chúng tôi sống hoàn toàn từ các khoản đó. Tôi quản lý thuế rất kỹ cho các tài sản đó, nhờ vậy năm 2013 và 2014, không phải trả đồng thuế nào mà mỗi năm còn chuyển 20 ngàn đô-la sang tài khoản hưu Roth IRA để được miễn thuế. Tôi đã đưa các báo cáo thuế lên blog để mọi người thấy thực tế như thế nào. Kế hoạch của chúng tôi là trong 30 năm tới sẽ chuyển hết tiền từ tài khoản hưu 401(k) sang tài khoản hưu Roth IRA để không chịu thuế, tóm lại là chúng tôi sẽ có 3 triệu đô-la trong 30 năm tới mà không phải đóng thuế.
@@ -422,32 +337,15 @@ data-ad-slot="3830899615">
   <br><u>Winnie</u>: Kế hoạch của chúng tôi thay đổi rất nhanh.
   <br><u>Jeremy</u>: Chúng tôi nghĩ ra nhiều kế hoạch. Đến Tây-ban-nha ở một năm, dùng nhà di động RV đi vòng quanh nước Mỹ, hay Mexico. Chúng tôi phải đợi việc sinh con và xem tính cách của con mình ra sao đã.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Bài học từ câu chuyện:</h2>
   <ol>
@@ -473,32 +371,15 @@ Bạn cũng nên đặt mục đích rõ ràng khi nào về hưu và quyết đ
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132811935500496898" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/427393317426282" rel="nofollow" target="_blank">Facebook</a></div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
