--- a/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia.html
+++ b/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia.html
@@ -226,32 +226,15 @@ data-ad-slot="5275186684">
   <p>Các bạn có thể đã đọc được những điều này rồi: 10 sai lầm huỷ hoại tuổi già, 6 điều nên tránh… Nhưng các bạn có nhận thấy rằng những bài đó được sao chép lẫn nhau.
   <br>Vậy điều gì là cốt lõi nhất để có một kế hoạch tiết kiệm hay đầu tư thành công? Đó là <b>Sự đều đặn</b>, làm đều đặn một việc mỗi tháng. Khi sự đều đặn đó bị gián đoạn, sẽ tốn vài tháng tới vài năm để lặp lại được một chuỗi đều đặn mới. Có một điều rất buồn cười trong việc tiết kiệm hay đầu tư là bạn càng phải nghĩ nhiều về nó, bạn càng ít làm gì (vì tốn thời gian nghĩ, không còn thời gian làm). Do đó, kế hoạch tiết kiệm tốt nhất là kế hoạch tự động lặp đi lặp lại. Mỗi khi phải bắt đầu lại, dù cho vì lý do gì, cũng rất tốn kém.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Người hàng xóm triệu phú (đô-la) - bậc thầy về ổn định</h2>
   <div class="flright"><div class="right">Hình từ <a href="https://www.dreamstime.com/lngoc25_info" target='_blank'>dreamstime.com</a></div><amp-img alt="Đầu tư đều đặn" src="/images/treasure.jpg" width="320" height="240" layout="responsive"></amp-img></div>
@@ -265,32 +248,15 @@ data-ad-slot="3830899615">
   <p>Nhà của họ đã được xây 30 năm trước, và không bao giờ họ mang thêm nợ vì nhà cửa. Họ trả góp cho hết căn nhà. Khi đã trả dứt, họ có gắn thêm bồn tắm mát-xa, nhưng cái đó được trả ngay bằng tiền tiết kiệm, không nợ.
   <br>Rất ít dịch vụ nào tốn phí cao như dịch vụ mua bán nhà. Tiền môi giới, tiền dọn nhà, tiền trang trí nhà mới…</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h3>Những định luật</h3>
   <p>Mặc dù Jim chưa bao giờ đọc sách về tài chính, ông ta có những định luật mà chúng ta vẫn được nghe hoài:</p>
@@ -308,32 +274,15 @@ data-ad-slot="3830899615">
   <br>Đó chính là điều mà bạn không thấy trong các danh sách những việc nên làm hoặc không nên làm.
   <br>Tất nhiên là không phải ai cũng làm được như ông nhưng tôi rất ấn tượng với ý nghĩ rằng không phải quyết định nào cũng chỉ đúng hoặc sai, và chúng ta thường bỏ sót những phí tổn mà sự thay đổi gây ra vì những phí tổn đó không rõ ràng.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <p>Ở Việt Nam cũng đã có những công cụ đầu tư hiện đại được nêu lên trong bài này:</p>
