--- a/huu-ich/cau-chuyen/sinh-lao-benh-tu.html
+++ b/huu-ich/cau-chuyen/sinh-lao-benh-tu.html
@@ -233,63 +233,29 @@ data-ad-slot="5275186684">
   <br>Thời xưa người ta nhắc nhau "Bệnh tòng khẩu nhập", nghĩa là bệnh theo đường ăn uống vào người, phải cẩn thận về đồ ăn thức uống. Bây giờ, muốn cẩn thận cũng không được vì thứ gì cũng mua từ chợ hay siêu thị, đã qua tay biết bao nhiêu trung gian, không biết họ cho thứ gì trong đó, mà ngay người chăn nuôi, trồng trọt cũng đã cho những thứ trời ơi vô rồi. Rồi biết bao nhiêu thứ bệnh không do lây nhiễm, giữ vệ sinh cách nào cũng không ngăn được bệnh tiểu đường, cao huyết áp, alzheimer, parkinson, gout, viêm khớp, gai cột sống…
   <br>Một điều khác nữa là thời xưa <strong>Lão</strong> đến trước - Bệnh đến sau, còn thời nay Bệnh không nhường cho Lão đến trước nữa. Bệnh đến với những người chưa lão thì thật sự là tai hoạ vì không ai chuẩn bị để gặp Bệnh quá sớm như vậy.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Thời xưa đã ít người chuẩn bị cho chữ Bệnh rồi, thời nay chắc là còn ít hơn nữa. Tôi chưa nghe ai nói là có sẵn sổ tiết kiệm hay miếng đất hay căn nhà để khi có bệnh thì bán đi để chữa bệnh, chỉ toàn là để dành cho con thôi.
   <br>Nếu không chuẩn bị đối phó với Bệnh thì thật là thiếu chăm sóc chính mình, và còn thiếu trách nhiệm với người thân nữa. Tại sao lại thiếu trách nhiệm với người thân? Khi mình bệnh thì người thân phải chăm sóc chứ còn ai khác nữa, nếu người thân không trực tiếp chăm sóc thì cũng tốn tiền thuê người chăm sóc.
   <br>Có khi sự thiếu trách nhiệm đó còn để lại sự tiếc nuối, day dứt suốt đời với người thân. Giả sử tôi để dành một căn nhà để bán đi khi con tôi đến tuổi du học, nhưng chẳng may tôi mắc bệnh ung thư, phải bán căn nhà đó đi để chạy chữa, con tôi không được đi du học, suốt đời nó sẽ mang ý nghĩ “phải chi cha mình không mắc bệnh thì bây giờ đời mình đã khác”. Ngược lại nếu tôi quyết định thà chết vì bệnh chứ không bán căn nhà, thì con tôi lại bị dằn vặt bởi ý nghĩ “cha mình đã hy sinh cho mình đi học”. Chuyện du học chỉ là một ví dụ, có thể lấy ví dụ khác. Giả sử tôi để dành một căn nhà để cho con tôi khi nó lập gia đình, nhưng chẳng may tôi mắc bệnh ung thư, phải bán căn nhà đó đi để chạy chữa, gia đình nhỏ của con tôi phải ở trọ, mỗi khi về đến nhà nó lại thở dài “phải chi cha mình không mắc bệnh thì đỡ biết mấy”. Giả sử trường hợp ngặt nghèo hơn, tôi chưa có gì để bán đi lấy tiền chữa bệnh, gia đình tôi sẽ lâm vào cảnh nợ nần vì vay tiền chữa bệnh, khi chết đi tôi để lại một khoản nợ khổng lồ cho vợ con. Những điều giả sử trên chưa xảy ra với gia đình tôi nhưng đã thật sự xảy ra với nhiều gia đình khác rồi.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Thật may là tôi và con tôi sẽ không phải tiếc nuối hay dằn vặt vì tôi đã chuẩn bị cho chữ Bệnh.
   <br>Tôi đã có bảo hiểm y tế bắt buộc. Để phòng khi bệnh nặng, chi phí điều trị vượt mức chi trả của bảo hiểm y tế; tôi trả 2,8 triệu đồng để có một hợp đồng bảo hiểm chăm sóc sức khoẻ với hạn mức chi trả 150 triệu đồng mỗi năm. Để bù đắp những chi phí không được bảo hiểm chăm sóc sức khoẻ thanh toán vì không có hoá đơn, tôi chuẩn bị một số tiền bảo hiểm những bệnh nghiêm trọng trong hợp đồng <a href="../cac-loai-bao-hiem/">bảo hiểm</a> nhân thọ. Chỉ với chi phí vài ngàn đồng mỗi ngày, tôi sẽ có hàng trăm triệu đồng bảo hiểm bệnh nghiêm trọng.</p>
@@ -304,32 +270,15 @@ data-ad-slot="3830899615">
   <br>Có một phương tiện rất tốt để đối phó với Lão và Bệnh cùng một lúc, đó là loại <a href="../cac-loai-bao-hiem/diem-tua-dau-tu">bảo hiểm nhân thọ liên kết quỹ đầu tư</a>: vừa nhanh chóng tạo ra một khoản bảo hiểm lớn từ vài chục ngàn đồng mỗi ngày, vừa sinh lời cao để có nhiều tiền dùng khi già.
   <br>Tôi vẫn thường xuyên đánh giá lại sự chuẩn bị của mình để điều chỉnh số tiền cho thích hợp.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Một số ít những gia đình may mắn hơn gia đình tôi: vừa có khoản để dành cho con, vừa có khoản để đối phó với Bệnh. Những gia đình may mắn này có thể củng cố sự may mắn của mình bằng cách dùng bảo hiểm để <b>nhân gấp đôi, gấp ba</b> ngân sách đối phó với Bệnh, đồng thời qua bảo hiểm giúp đỡ những người không may mắc bệnh.</p>
   <p>Những người trẻ tuổi, độc thân cũng nên chuẩn bị đối phó với chữ Bệnh để có trách nhiệm với chính mình và cha mẹ mình. Đừng để cha mẹ phải tiếp tục lo lắng, sau khi vừa lo xong cho con học thành tài.</p>
