--- a/huu-ich/chi-tieu.html
+++ b/huu-ich/chi-tieu.html
@@ -230,32 +230,15 @@ data-ad-slot="5275186684">
     Bạn có biết rằng theo <a href="http://web.archive.org/web/20130731094951/http://t5g.org.vn/?u=dt&amp;id=3026" target="_blank">kết-quả-thống-kê năm 2010</a>, 70% số người-cao-tuổi ở Việt-Nam vẫn phải làm-việc để kiếm-sống, chỉ có 20% số người-cao-tuổi có lương-hưu hay trợ-cấp-xã-hội. Bạn có biết rằng với đà lạm-phát hàng năm thì mình sẽ cần bao-nhiêu tiền khi về-hưu để có mức-sống ngang với mức hiện-nay? Và bạn có biết mình sẽ nhận được bao-nhiêu tiền lương-hưu mỗi tháng? Hãy tính <a href="ke-hoach-tai-chinh/huu-tri">số tiền hưu-trí cho riêng bạn ở đây</a>.
   </blockquote>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Phương-pháp sáu cái lọ</h2>
   <p>Tiết-kiệm như-thế-nào để không cảm-thấy quá eo-hẹp? Để đạt đến sự-an-toàn và tự-do về mặt tiền-bạc hãy chi-tiêu có kế-hoạch, hãy chia thu-nhập thành sáu khoản như sau:</p>
@@ -277,32 +260,15 @@ data-ad-slot="3830899615">
   <p>Điều quan-trọng trong cách chi-tiêu này là phải có đủ 6 khoản trên; không nhất-thiết phải chia theo đúng tỉ-lệ như trên. Tỉ-lệ trên chỉ là một gợi-ý cho những trường-hợp chung; bạn có thể thay-đổi đôi-chút cho phù-hợp với khả-năng và mục-đích trong những <a href="cac-giai-doan">giai-đoạn khác-nhau của cuộc-đời</a>.
   Bạn có-thể dùng bảng-tính KHTC để lập những khoản phải chi trong tương lai xem để bao-nhiêu phần thu-nhập vào <i>tự-do tài-chính</i> là đủ cho tương-lai (xem <a href="ke-hoach-tai-chinh/">Kế-hoạch-tài-chính</a>). Sau khi tính-toán được các tỉ lệ phân bổ cho 6 khoản trên rồi thì bạn hãy thực hiện nó một cách <i>kỷ luật</i>, đừng tuỳ tiện co giãn theo sự <i>chi tiêu tự do</i> hàng tháng. Để bớt bị cám dỗ chi tiêu tự do thì nên trích tiền gửi đầu tư ngay khi có thu nhập, đừng đợi chi tiêu xong rồi mới đem phần dư gửi đầu tư. Đó gọi là <a href="cau-chuyen/bat-dau-dau-tu">trả tiền cho chính mình trước</a>.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Các quỹ phải có trong gia-đình</h2>
   <p>Mỗi gia-đình cần có nhiều quỹ khác-nhau:</p>
@@ -337,32 +303,15 @@ data-ad-slot="3830899615">
   </div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Phân-biệt kiếm-tiền và giữ-tiền</h2>
   <p>Khoản-tiền cần phải có để <b><span class="tblue">Tự-do-tài-chính</span></b> rất lớn nên dù cho người giỏi kiếm-tiền cũng không-thể nhanh-chóng kiếm ra ngay số-tiền đó được mà phải tích-luỹ trong thời-gian dài. Thật-vậy, quỹ-tự-do-tài-chính phải lớn hơn 300 lần chi-tiêu hàng tháng, cần ít-nhất bao-nhiêu năm để tạo ra quỹ đó? Cách chắc-chắn nhất để có quỹ đó là giữ-tiền trong những công-cụ có <a href="tich-luy-dai-han">độ an-toàn và sinh-lợi cao nhất</a>, và đều-đặn gửi thêm tiền vào. Bạn hãy thử dùng bảng-tính <a href="ke-hoach-tai-chinh/tk-m-co-dinh">TK-M-cố-định</a> để tính xem sau-này bạn sẽ có bao-nhiêu <b><span class="tblue">tỉ đồng</span></b> từ 10% thu-nhập đó.</p>
@@ -382,32 +331,15 @@ data-ad-slot="3830899615">
   </div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Công-cụ thực-hành kế-hoạch chi-tiêu</h2>
   <p>Theo tài-liệu tham-khảo dưới đây thì người-ta dùng sáu cái lọ để đựng tiền dùng cho sáu khoản trên; khi chi-tiền thì nhớ lấy tiền từ đúng lọ. Bạn có-thể dùng sáu cái phong-bì đựng tiền thay cho sáu cái lọ. Thật-ra thì những khoản số 4 và 6 rất lớn nên không-thể để trong lọ hay phong-bì được mà là tài-khoản đầu-tư hay bất-động-sản. Nếu bạn để tiền trong tài-khoản ngân-hàng giống như tôi thì không-thể dùng lọ hay phong-bì cho những khoản-chi khác-nhau. Để quản-lý các tài-khoản đó phải dùng chương-trình máy-tính. Bạn có-thể xem thêm kinh-nghiệm dùng <a href="/kinh-nghiem/may-tinh/gnucash">gnucash</a> để quản-lý thu-chi. Tất-nhiên bạn cũng có-thể dùng gnucash khi bạn không có tài-khoản ngân-hàng; khi dùng gnucash, bạn không phải đếm xem trong mỗi lọ hay phong-bì còn bao-nhiêu tiền, chỉ cần nhìn vào báo-cáo của gnucash là biết ngay.
