--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -256,32 +256,15 @@ data-ad-slot="5275186684">
   <p>(Đừng mua vàng hay USD để dành, lý do được giải thích trong <a href="#goldusd">phần cuối</a> của bài này.)</p>
   <p>Các nhà kinh tế nói rằng đầu tư dài hạn vào quỹ đầu tư sẽ có lợi hơn gửi tiết kiệm ở ngân hàng. Lý thuyết đó có đúng trong thực tế không, và nhất là có đúng với thị trường Việt Nam không?</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Kết quả thực tế</h2>
   <p>Trong bài này, tôi sẽ so sánh kết quả giữa hai phương tiện trên bằng những tính toán trên những số liệu thực tế trong một thời gian dài hơn 12 năm.
@@ -319,32 +302,15 @@ data-ad-slot="3830899615">
   <br>Tính chất có kỳ hạn của sổ tiết kiệm cũng ảnh hưởng đến lợi nhuận trung bình của cách tích luỹ tiền ở ngân hàng: mỗi khi lãi suất tiến kiệm ở ngân hàng tăng hay giảm thì một năm sau mới thể hiện trên lợi nhuận trung bình. Ở phía bên kia, giá đơn vị quỹ đầu tư thay đổi hàng tuần thể hiện ngay trên lợi nhuận trung bình.</p>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Lợi ích trong tương lai xa</h2>
   <p>Các con số lãi suất ở trên là lãi kép nên thời gian càng dài thì kết quả càng lớn. Ví dụ với lãi suất như trên, gửi mỗi 4 tuần 1 triệu đồng sau 30 năm sẽ từ 390 triệu đồng:</p>
@@ -374,32 +340,15 @@ data-ad-slot="3830899615">
   <p>Kết quả của quỹ đầu tư cao hơn sổ tiết kiệm có vài phần trăm mỗi năm vì lãi suất tiết kiệm (và lãi suất cho vay) ở Việt Nam quá cao. Ở Singapore, gửi tiết kiệm kỳ hạn 3 năm lãi 0,65%/năm còn quỹ đầu tư cổ phiếu thì được khoảng 7,5%/năm sau 10 năm, chênh lệch gấp 10 lần. Hy vọng kinh tế Việt Nam sẽ thay đổi theo hướng đó: lãi suất ngân hàng giảm xuống để giảm chi phí cho các doanh nghiệp và người đi vay.</p>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2 id="goldusd">Tiết kiệm bằng USD hoặc vàng có tốt hơn không?</h2>
   <p>Tôi giả định rằng chị U mua 100USD mỗi bốn tuần từ đầu năm 2009 đến nay chị U có 16.700
@@ -427,32 +376,15 @@ data-ad-slot="3830899615">
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132808171318173697" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/627783754053903" rel="nofollow" target="_blank">Facebook</a></div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
