--- a/huu-ich/de-tien-vao-dau.html
+++ b/huu-ich/de-tien-vao-dau.html
@@ -226,32 +226,15 @@ data-ad-slot="5275186684">
   <p>Hẳn là những người có tiền tiết kiệm đang băn khoăn không biết sắp tới nên đưa tiền vào đâu trong tình hình lãi suất huy động vốn ở ngân hàng đang giảm dần.
   <br>Những người chưa có tiền tiết kiệm thì nên đọc bài <a href="tich-luy">tại sao cần phải tiết kiệm</a>.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Lý thuyết</h2>
   <div class="flright">
@@ -275,32 +258,15 @@ data-ad-slot="3830899615">
   <p>Khi đã xác định được mục tiêu là đầu tư cổ phiếu lâu dài để có lợi nhuận cao hơn gửi tiết kiệm ngân hàng rồi thì việc phải làm là <a href="tich-luy">tích luỹ</a> thật nhiều <b>cổ phiếu tốt</b> để 10-20-30 năm sau bán đi lấy tiền dùng. Với một số tiền nhất định, muốn có nhiều cổ phiếu hơn thì hãy mua vào khi giá cổ phiếu xuống.
   <br>Nhà đầu tư cần có đủ kiến thức để chọn được các cổ phiếu tốt. Cổ phiếu tốt là cổ phiếu của những công ty tốt nhưng giá chưa quá cao. Công ty tốt là công ty tăng trưởng tốt.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 
   <h2>Thực tế</h2>
@@ -323,32 +289,15 @@ data-ad-slot="3830899615">
   <br>Đầu tư vào cổ phiếu và quỹ đầu tư trong nước còn nhắc nhở tôi <a href="/y-kien/dung-hang-viet-nam">dùng hàng Việt Nam</a>. Và tôi cũng biết ơn những người thường xuyên tiêu thụ sản phẩm Vinamilk, Kinh Đô, dùng dịch vụ ngân hàng Eximbank, những người đã đem lại lợi nhuận cho tôi.</p>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Có nên đưa tiền vào thị trường chứng khoán Việt Nam lúc này không?</h2>
   <p>Mọi người đều muốn đưa tiền vào thị trường chứng khoán lúc giá cổ phiếu thấp nhất rồi nhìn nó lên giá. Nhưng bạn có biết chính xác lúc nào giá thấp nhất không? Nếu không biết thì hãy dùng phương pháp <a href="dau-tu-co-phieu/">bình quân giá cổ phiếu</a> để đưa tiền vào đầu tư thay vì ngồi đợi giá xuống thêm, lỡ giá không xuống thêm mà tăng lên thì có uổng không! Tham gia đầu tư định kỳ vào quỹ đầu tư là làm theo phương pháp bình quân giá cổ phiếu đó. Giá cổ phiếu có xuống, bạn lỗ ít hơn là đưa hết một đống tiền vào ngay một lúc. Giá cổ phiếu không tăng, bạn không bị lỗ.
@@ -378,32 +327,15 @@ data-ad-slot="3830899615">
   </div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
