--- a/huu-ich/tich-luy.html
+++ b/huu-ich/tich-luy.html
@@ -241,32 +241,15 @@ data-ad-slot="5275186684">
     <li><a href="#how">Làm sao tích luỹ được?</a></li>
   </ol>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2 id="why">Tại sao mỗi người cần phải tích luỹ?</h2>
   <p>Trong xã hội ngày nay, muốn sống được thì phải có tiền. Tiền dùng để:</p>
@@ -290,32 +273,15 @@ data-ad-slot="3830899615">
   <p>Bạn thử tưởng tượng một buổi sáng nào đó bạn đi ra đường mà quên đem theo tiền (và các thứ thẻ rút tiền), bạn sẽ thấy lúng túng như thế nào. Định ghé vào tiệm phở ăn sáng, sờ đến túi không thấy tiền nên thôi, muốn mua xôi ăn sáng cũng không được. Khát nước muốn ghé mua chai nước, cũng không có tiền. Muốn ghé vào tiệm sách đọc ké cho quên cơn đói, cũng không có tiền gửi xe… Chỉ một buổi sáng thiếu tiền mà bạn đã bối rối rồi, nếu thiếu tiền trong 15-20 năm thì bạn sẽ như thế nào? Muốn mua gói mì để ăn sáng, cũng phải hỏi xin con cho tiền.</p>
   <p>Để không bị thiếu thốn khi tuổi già đến, mỗi người đều phải tích luỹ một số tiền lớn cho tuổi già của chính mình. Chúng ta còn chưa bàn đến việc tích luỹ tài sản để mua nhà hay để lại cho con cháu!</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2 id="howmuch">Tích luỹ bao nhiêu tiền?</h2>
   <p>Chỉ cần làm phép nhân đơn giản, lấy số tiền bạn đang tiêu mỗi tháng nhân cho 12 là được số tiền tiêu mỗi năm, nhân tiếp cho 20 hay 30 là số tiền bạn cần có khi về hưu.
@@ -424,32 +390,15 @@ data-ad-slot="3830899615">
     <li>Để cho tính toán đơn giản, giả sử mức thu nhập và chi tiêu tăng đều theo mức trượt giá</li>
   </ul>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Thực tế thì thu nhập thường tăng từ từ theo thời gian, đôi khi có thể giảm đột ngột; còn chi tiêu thì cũng  tăng từ từ theo thời gian nhưng đôi khi lại tăng đôt ngột. Khi lập gia đình, có con thì chi tiêu sẽ tăng đáng kể trong một khoảng thời gian dài hơn 20 năm.
   <br>Do đó kết quả tính toán đơn giản trên đây chưa đủ an toàn, cần phải tiết kiệm nhiều hơn mới đủ an toàn.
@@ -461,32 +410,15 @@ data-ad-slot="3830899615">
   <p>Phần nhiều thanh niên đều nghĩ rằng đến khi lập gia đình rồi mới bắt đầu tiết kiệm. Bạn thử nghĩ xem không có quyết tâm tiết kiệm 26% thu nhập khi còn độc thân năm 23 tuổi, thì làm cách gì mà tiết kiệm được 31,7% thu nhập khi 30 tuổi và đang nuôi con.
   <br>Để dành tới 26% thu nhập thì nhiều quá! Rất may là có cách để giảm tỉ lệ tiết kiệm trên thu nhập xuống một chút để bạn có thể chi tiêu rộng rãi hơn một chút. Đó là tìm cách cho tiền tiết kiệm sinh lợi nhiều hơn. <b>Cột thứ tư và cột thứ năm</b> cho thấy rằng nếu tiền tiết kiệm có <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">lãi suất càng cao</a> thì càng ít phải để dành hơn.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Thu nhập thụ động</h2>
   <p>Khi bạn bắt đầu tích luỹ 10,5% thu nhập vào năm 23 tuổi, khoản lợi nhuận sinh ra từ khoản tích luỹ đó (gọi là thu nhập thụ động) trong tháng đầu tiên chỉ bằng <b>1,575%</b> (<i>15%</i> x 10,5%) thu nhập chủ động hàng tháng. Nếu bạn cứ tích luỹ đều đặn như vậy thì thu nhập thụ động sẽ:</p>
@@ -505,32 +437,15 @@ data-ad-slot="3830899615">
   <p>Bạn hãy dùng phần mềm quản lý tài sản <a href="/kinh-nghiem/may-tinh/gnucash">GnuCash</a> để theo dõi việc tích luỹ của mình. Hãy cố gắng sao cho báo cáo tài sản của bạn giống như đồ thị này.</p>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2 id="what">Tích luỹ cách nào để được lợi nhuận cao?</h2>
   <p>Một số người dùng số tiền tiết kiệm làm vốn tự kinh doanh quy mô nhỏ, có thể sinh lời nhiều hơn lãi suất tiết kiệm ngân hàng đến vài lần, rất tốt! Tuy nhiên việc buôn bán nhỏ không thể phát triển mãi đến quy mô vài chục tỉ đồng mà vẫn giữ nguyên lợi nhuận cao. Do đó luôn luôn cần đến các cách tích luỹ sinh lợi khác. Và một điều cần phải luôn luôn nhớ là không bao giờ để hết trứng trong một giỏ. Để hết vốn liếng vào một chỗ, đến khi thị trường không thuận lợi thì rất nguy. Nên chia tài sản ra nhiều chỗ: chỗ lợi nhuận thấp và rủi ro thấp, chỗ lợi nhuận cao và rủi ro cao.</p>
@@ -549,32 +464,15 @@ data-ad-slot="3830899615">
     <li>mua <a href="cac-loai-bao-hiem/">bảo hiểm</a> y tế và bảo hiểm tai nạn</li>
   </ol>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p><b>Rất khó</b> để đạt được ngay lập tức tỉ lệ tiết kiệm như <a href="ke-hoach-tai-chinh/">bảng tính kế hoạch tài chính</a> tính cho bạn. Tuy nhiên bạn đừng nản lòng. Việc tập thói quen tiết kiệm cũng giống như cai thuốc lá hay là giảm cân, cần có thời gian để làm quen với nó. Hãy cố gắng bắt đầu với mức tiết kiệm 10% thu nhập, 3 tháng hoặc nửa năm sau tăng lên 15%, tăng từ từ đến khi đạt mức yêu cầu. Đừng bao giờ nản lòng.
   <br>Nếu bạn thấy khó giảm 10% chi tiêu hàng tháng, bạn hãy thử tưởng tượng lương bạn đột ngột bị giảm 10% hoặc lạm phát 10% mà lương chưa tăng (chuyện này rất dễ xảy ra trong thực tế). Khi đó bạn có tiếp tục sống không? Chắc chắn là vẫn sống, đâu có ai nhảy cầu tự tử vì bị mất 10% thu nhập. Vậy thì bạn hãy tự bớt chi tiêu của mình để khi về già không phải nghĩ đến chuyện nhảy cầu tự tử vì bị giảm đến 90% thu nhập.</p>
@@ -595,32 +493,15 @@ data-ad-slot="3830899615">
   <p>Bạn bắt đầu ăn mừng và lơi lỏng việc tiết kiệm khi tài sản tích luỹ được hơn vài chục tháng thu nhập.
   <br>Bạn cần xem lại kế hoạch tài chính trước khi cho phép mình giảm mức độ tiết kiệm.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2 id="luonghuu">Lương hưu ở các nước</h2>
   <h3>Pháp</h3>
@@ -637,32 +518,15 @@ data-ad-slot="3830899615">
   <br>Nhiều người Mỹ tự lập kế hoạch hưu trí cho mình qua kế hoạch 401(k) vì <i>không thể hoàn toàn dựa vào quỹ Social Security</i> (<a href="http://www.kiplinger.com/columns/starting/archive/get-ahead-with-401k-in-your-20s.html" target='_blank'>Why You Need a 401(k) Right Away</a>). Theo kế hoạch 401(k), mỗi người <i>tự quyết định</i> sẽ trích bao nhiêu phần trăm lương của mình để gửi vào tài khoản hưu trí. Tài khoản hưu trí đó sẽ được giao cho các công ty quản lý quỹ hoặc công ty bảo hiểm nhân thọ quản lý, sinh lợi. Công ty quản lý quỹ thường tạo ra vài quỹ đầu tư khác nhau về mức lợi nhuận và rủi ro để người chủ tài khoản chọn theo ý riêng. Số tiền trích vào quỹ hưu trí sẽ không chịu thuế thu nhập cho tới khi được rút ra dùng. Một số người sử dụng lao động còn thưởng thêm một phần vào quỹ hưu trí của người làm công với điều kiện người làm công không rời công ty sớm hơn 3-4 năm. Người lãnh lương ở Mỹ được tư vấn lập kế hoạch 401(k) sớm, ngay khi bắt đầu lãnh lương. Có những bài viết hướng người ta đến mục tiêu có <a href="thong-ke-huu-tri-tu-nguyen-my">một triệu đô-la</a> trong tài khoản 401(k) khi về hưu.
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h3>Nhật</h3>
   Mỗi người thường trú ở Nhật đóng vào quỹ hưu trí cho nhà nước quản lý hàng tháng một số tiền bằng nhau. Ví dụ trong năm tài chính 2010, mức đóng là 15.000¥/tháng. Nếu vì lý do thu nhập thấp, không thể đóng đủ số tiền trên thì phải đăng ký miễn/giảm với chính quyền địa phương. Từ tuổi 65 trở đi, người đã tham gia hệ thống hưu trí từ 25 năm trở lên sẽ được nhận lương hưu, mức lương hưu nhận được tuỳ theo số năm tham gia hệ thống. Ví dụ trong năm tài chính 2010, người đã tham gia 40 năm sẽ nhận được 792.100¥/năm. <a href="http://en.wikipedia.org/wiki/National_Pension_(Japan)" target='_blank'>National Pension (Japan)</a>
@@ -672,32 +536,15 @@ data-ad-slot="3830899615">
   <p>Có thể thấy hệ thống lương hưu qua Bảo hiểm Xã hội ở Việt Nam cũng tương tự như ở các nước đã phát triển. Những nước có nền kinh tế hàng đầu thế giới, xã hội công nghiệp hoá lâu đời như Nhật và Mỹ mà vẫn không bảo đảm một khoản lương hưu khá cho mọi người, vẫn để cho người dân tự lo cho tương lai mình thì người Việt chúng ta càng cần phải lo cho tương lai mình kỹ hơn. Việt Nam cũng đang đi theo cách các nước đó: các công ty bảo hiểm nhân thọ đã lập các <a href="tien-thuong-cuoi-nam">quỹ hưu trí tự nguyện</a> để bù thêm vào lương hưu từ bảo hiểm xã hội. Mỗi người đều phải tự lo cho tương lai của mình.</p>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h4>Truyện vui</h4>
   <p>Người ta thường mất vài năm mới có tiền nhiều gấp đôi. Có một mẹo nhỏ để nhanh chóng có nhiều tiền GẤP ĐÔI, đó là: mỗi khi bạn rút tiền ra khỏi bóp để mua món gì đó thì hãy GẤP ĐÔI tờ tiền và cất trở vào bóp rồi đi về.
