--- a/kinh-nghiem/linh-tinh/magchan.html
+++ b/kinh-nghiem/linh-tinh/magchan.html
@@ -239,32 +239,15 @@ data-ad-slot="5275186684">
   <p>Tôi tìm đọc những nhận xét ở các trang web bán Magchan thì thấy số người khen sản phẩm nhiều hơn số người chê nên tui mua thử một gói 100g dùng thử.
   <br><b>Kết quả không như mong muốn</b>.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Một vài kết quả thử Magchan</h2>
   <p>Trước tiên tôi nói về việc giặt ở nhà tôi.
@@ -277,32 +260,15 @@ Nhiều người cho rằng những chỗ khuất của máy giặt rất dơ, c
   <div><amp-img src="/images/maygiat.jpg" width="1004" height="753" layout="responsive"></amp-img></div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h3>Giặt với Magchan mà thôi</h3>
   <p>Tôi làm đúng như hướng dẫn của nhà sản xuất: chỉ dùng Magchan ngâm 45', giặt 15', xả nước hai lần rồi vắt.
@@ -330,32 +296,15 @@ data-ad-slot="3830899615">
   <p>Sở dĩ tôi thử giặt tay vì tôi để ý thấy nước trong máy giặt khi dùng Magchan không đục như khi dùng nước giặt.</p>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Tại sao quần áo hôi?</h2>
   <p>Quần áo dùng trong sinh hoạt thông thường hàng ngày dính bụi, các chất tiết ra từ cơ thể (mồ hôi và các chất khác). Ngoài nước và các chất muối, những chất tiết ra từ cơ thể có chứa chất béo và chất đạm. Vi khuẩn từ da người, từ bụi sẽ ăn những chất béo và chất đạm đó và thải ra những chất khác có mùi hôi.</p>
@@ -373,32 +322,15 @@ data-ad-slot="3830899615">
   <br>* <a href="/kinh-nghiem/linh-tinh/">Những kinh nghiệm khác</a>
   </div>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
