--- a/kinh-nghiem/linh-tinh/may-lanh.html
+++ b/kinh-nghiem/linh-tinh/may-lanh.html
@@ -233,32 +233,15 @@ data-ad-slot="5275186684">
   <p>Số Btu/h đó là công suất truyền nhiệt giữa hai phần của máy ĐHNĐ chứ không phải công suất tiêu thụ điện của máy. Công suất tiêu thụ điện của máy ĐHNĐ 9.000Btu/h khoảng 0,97kW; tức là hiệu suất của máy khoảng 2,72 lần. Máy tốt hơn-ít hao điện hơn thì hiệu suất có thể lên đến hơn 3 lần. Máy (có công suất) lớn hơn thường có hiệu suất cao hơn.
   <br>Nhiều người (kể cả ở các nước Đông Nam Á và Mỹ) dùng đơn vị ngựa để chỉ công suất máy lạnh, 1 ngựa tương đương 9.000Btu/h (sic); có lẽ chữ 'ngựa' ở đây chỉ công suất tiêu thụ điện gần bằng 1kW.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h3>Làm khô không khí</h3>
   <p>Một tác dụng phụ của máy lạnh là làm giảm độ ẩm không khí trong phòng, làm cho người cảm thấy dễ chịu hơn. Độ ẩm tương đối thích hợp cho người ở trong khoảng 30% tới 60%. Hầu hết các máy lạnh thời nay đều có chế độ làm khô không khí. Tuy nó thật sự làm giảm lượng hơi nước trong không khí nhưng nó không có bộ phận đo độ ẩm không khí, không có cách kiểm soát độ ẩm tương đối. Do đó nó chỉ làm việc theo một chu trình cố định là chạy máy bơm trong vài phút rồi ngừng bơm trong vài phút. Trong những phút máy bơm chạy, hơi nước trong không khí được làm lạnh trong máy sẽ ngưng tụ lại và chảy ra khỏi phòng theo ống dẫn. Tỉ lệ giữa thời gian chạy và thời gian ngừng máy bơm thay đổi theo nhiệt độ người dùng chọn trên bộ điều khiển từ xa. Với một <a href="nhiet-do">ẩm kế</a> rẻ tiền của Trung Quốc (ẩm kế và nhiệt kế chỉ kim, vỏ nhựa, giá 50.000₫), ta có thể dễ dàng thấy tác dụng phụ của máy lạnh. Độ ẩm tương đối trong mùa mưa ở Sài Gòn thay đổi trong khoảng 65% vào lúc trưa nắng tới 100% vào lúc sáng sớm.
@@ -271,32 +254,15 @@ data-ad-slot="3830899615">
   <p>Trong mỗi máy lạnh (loại 1 cục hay 2 cục, loại inverter hay loại thường đều như nhau) có 4 cái động cơ chính là động cơ nén, quạt làm mát dàn nóng, quạt đối lưu trong phòng và động cơ đảo hướng gió. Quạt đối lưu trong phòng thì quay không ngừng trong suốt thời gian dùng máy lạnh, theo tốc độ mà người dùng máy chọn (hoặc khi nhanh khi chậm trong chế độ auto). Động cơ đảo hướng gió thì ngừng hay chạy tùy theo người dùng chọn. Động cơ nén và quạt làm mát dàn nóng thì chạy hay nghỉ cùng lúc. Động cơ nén của máy lạnh loại thường sẽ chạy theo kiểu đóng/mở, tức là chạy ở công suất tối đa hoặc không chạy.</p>
   <p>Trong 4 động cơ đó, động cơ nén dùng nhiều điện nhất. Việc tiết kiệm điện tập trung vào chỗ này.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Inverter là gì?</p>
   Động cơ điện xoay chiều bình thường sẽ có tốc độ gần như không đổi, công suất gần như không đổi. Tốc độ của động cơ tỉ lệ với tần số điện xoay chiều (ở Việt Nam là 50Hz). Tốc độ có thay đổi chút ít theo tải của động cơ, tức là lực cản trên trục động cơ, tải nặng thì tốc độ giảm. Quạt máy có thể thay đổi tốc độ đôi chút bằng cách thay đổi cường độ dòng điện, cũng là thay đổi công suất của động cơ.
@@ -322,32 +288,15 @@ data-ad-slot="3830899615">
   <p>Xem thêm trang <a href="https://en.wikipedia.org/wiki/Inverter_(air_conditioning)" target="_blank">wikipedia</a> và trang web về <a href="nong">nóng</a> và <a href="/huu-ich/ke-hoach-tai-chinh/">tiết kiệm</a>.</p>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 
   <h2>Những cách dùng máy lạnh sai!</h2>
@@ -357,32 +306,15 @@ data-ad-slot="3830899615">
   <h3>Chọn nhiệt độ thấp hơn trên remote khi có nhiều người vào phòng</h3>
   <p>Một cách dùng sai khác nữa là chọn nhiệt độ xuống thấp hơn để <i>bù</i> cho những nguồn nhiệt trong phòng. Ví dụ: khi có ít người trong phòng thì chọn nhiệt độ 25℃, khi có thêm người hay thêm máy trong phòng thì chọn nhiệt độ 20℃. Đúng ra thì người dùng không phải làm việc bù đó; máy lạnh sẽ tự làm bằng cách chạy máy nén nhiều thời gian hơn, nghỉ ít hơn. Nếu máy nén cứ chạy liên tục không nghỉ có nghĩa là nó đã làm việc hết công suất rồi, có chỉnh xuống 16℃ cũng không mát hơn tí nào.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Tất cả những thói quen sai đó là do người dùng không hiểu bản chất của máy ĐHNĐ. Máy ĐHNĐ không giống cái quạt máy. Ta có thể thấy tác dụng ngay khi ta điều chỉnh tốc độ quạt máy, nhưng ta không thể thấy tác dụng ngay khi ta chỉnh nhiệt độ ở máy ĐHNĐ. Bộ ĐKTX đã làm cho người ta ít dùng đến tay chân, lại còn làm cho người dùng hiểu sai bản chất của máy!</p>
   <p>Người quen ở vùng nhiệt đới sẽ hoàn toàn cảm thấy dễ chịu trong nhiệt độ khoảng 25-27℃, đặt máy lạnh dưới 25℃ là phí điện và thậm chí có thể gây bệnh.</p>
@@ -391,64 +323,30 @@ data-ad-slot="3830899615">
   <p>Một số thợ điện lạnh thường khuyên người dùng <a href="/huu-ich/chi-tieu"><i>tiết kiệm</i></a> điện bằng cách chọn nhiệt độ thấp nhất! Họ giải thích rằng khi chọn nhiệt độ thấp nhất thì máy nén sẽ chạy liên tục với một cường độ dòng điện ổn định nên mức tiêu thụ điện cũng đều đặn; nếu chọn nhiệt độ cỡ 25℃ trở lên thì máy nén sẽ có lúc nghỉ, có lúc chạy, mỗi lần chạy lại thì dòng điện khởi động lớn gấp 4-5 lần dòng điện bình thường nên rất <i>hao</i> điện! Nhưng họ không chịu tính kỹ rằng dòng điện khởi động đó chỉ cao trong 1-2 giây mà thôi, tính ra thì thời gian khởi động đó chỉ hao điện bằng 5-10 giây chạy bình thường, rất ít so với hàng chục phút máy nén được nghỉ trước đó. <br />
 Như vậy <a href="/huu-ich/chi-tieu">tiết kiệm</a> điện kiểu lạ đời trên thật hại điện và còn hại luôn sức khoẻ người dùng lẫn tuổi thọ máy.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h3>Mở cửa cho thoáng</h3>
   <p>Một cách dùng máy lạnh hại điện khác nữa là mở máy lạnh cho mát và mở cửa sổ cho thoáng, vừa thoáng vừa mát mới thích! Với khí hậu nhiệt đới như ở Việt Nam, nhiệt độ không khí bên ngoài có thể cao hơn nhiệt độ trong phòng đến 10℃, mở cửa sổ ra thì lượng nhiệt <a href="nong">truyền vào phòng</a> rất lớn, máy lạnh phải tốn rất nhiều điện để bơm lượng nhiệt đó trở ra ngoài.
   <br>Nếu cần thay đổi không khí để làm thoáng trong phòng thì nên gắn một quạt hút gió ở nơi nóng nhất trong phòng. Quạt hút không khí trong phòng và đẩy ra ngoài; không khí ngoài trời sẽ tự tìm lối vào phòng qua các khe cửa. Cần chọn cỡ quạt hút vừa đủ để làm thoáng phòng, quạt lớn quá cũng sẽ gây hao điện do có quá nhiều không khí nóng vào phòng. Nếu không chọn được quạt hút đủ nhỏ thì có thể cho quạt chạy cầm chừng (vừa chạy vừa nghỉ); hoặc không gắn quạt hút mà thỉnh thoảng mở cửa một lúc cho thoáng rồi đóng lại.
   <br>Những máy lạnh kiểu cửa sổ (máy lạnh một khối, gắn trên tường, phần lạnh trong phòng, phần nóng ngoài phòng) có sẵn chức năng thông gió, không cần gắn quạt hút trong phòng. Trên máy lạnh đó có một cần gạt để đóng mở một lỗ thông gió nhỏ chừng 25-30㎠. Khi mở lỗ ra, một phần không khí trong phòng sẽ bị đẩy ra ngoài qua lỗ đó.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h3>Gắn quá cao hoặc quá thấp</h3>
   <p>Một cách dùng sai nữa là gắn máy lạnh quá cao hoặc quá thấp. Khi máy lạnh chạy, nó sẽ làm mát phần không khí <b>bên dưới</b> nó, phần không khí bên trên nó thì không được làm mát. Trong văn phòng hay nhà ở thì người ta chỉ cần làm mát từ độ cao từ sàn lên đến 1,5m là đủ cho người ngồi hay nằm đều mát. Gắn máy lạnh quá cao thì phí điện. Những nhà có trần cao đến 3m hoặc hơn mà gắn máy lạnh gần sát trần sẽ bị hao điện vô ích. Ngoài ra gắn máy lạnh loại treo tường quá sát trần cũng làm cản luồng không khí đi vào máy. Tuy nhiên gắn máy lạnh thấp xuống ngang tầm mắt thì đúng về kỹ thuật nhưng lại không được đẹp mắt. Do đó các nhà sản xuất mới làm ra loại máy lạnh mặt gương hay khung tranh. Gắn máy lạnh quá thấp thì người trong phòng chỉ thấy lạnh chân mà không mát người. Loại máy lạnh một khối hay rơi vào tình trạng gắn quá thấp hoặc quá cao. Vì nhà phố ở Việt Nam chỉ có thể gắn máy lạnh loại này ở mặt tiền, mà mặt tiền thì vốn đã có cửa sổ và cửa đi chiếm gần hết nên chỉ có thể gắn máy lạnh dưới hoặc trên cửa sổ.
@@ -459,32 +357,15 @@ data-ad-slot="3830899615">
   <p>Thiết kế cái khoang để giàn nóng máy lạnh như vậy để che ống và dây điện, tạo vẻ đẹp bên ngoài cho chung cư, nhưng khoảng lá sách quá nhỏ và thấp không đủ để thoát hơi nóng khi máy hoạt động. (Nhà này kiểu có gác nên chiều cao của khoang chỉ có 1,5m. Những nhà kiểu không có gác thì cái khoang đó cao hơn và có thêm khoảng lá sách trên khoảng lợp kính nên hơi nóng thoát ra được bằng sự đối lưu.)</p>
   <p>Vì kín như vậy nên khi máy lạnh chạy, quạt thổi giàn nóng chỉ thổi được một ít không khí nóng thoát ra ngoài, <i>phần lớn</i> không khí nóng luẩn quẩn trong khoang, chừng 30 phút sau là nhiệt độ trong khoang tăng lên đến mức máy nén tự ngừng, chỉ còn quạt tiếp tục thổi giàn nóng. Máy nén ngừng chạy thì trong nhà không mát nữa. Tôi đã dịch giàn nóng về phía lá sách hết cỡ, còn cách chừng 8cm, vẫn không thoát nhiệt kịp. Mỗi lần bị rơi vào tình trạng đó là phải tắt máy, đợi chừng một giờ cho giàn nóng nguội hẳn rồi mới mở máy lại, thật là khổ!</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <div>
   <table class="noborder">
@@ -507,32 +388,15 @@ data-ad-slot="3830899615">
   </div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
