--- a/kinh-nghiem/may-tinh/cloudstorage.html
+++ b/kinh-nghiem/may-tinh/cloudstorage.html
@@ -227,32 +227,15 @@ data-ad-slot="5275186684">
   <h2>Backup</h2>
   <p>Từ vài chục năm trước, những người dùng máy tính cẩn thận đều định kỳ làm một việc quan trọng là backup, chép các file cần giữ sang một hoặc nhiều vật chứa khác, giữ nhiều bản sao ở các ngày khác nhau, thậm chí những bản sao đó còn được đem đi cất ở toà nhà khác hoặc địa phương khác để lỡ khi hoả hoạn hay thiên tai xảy ra thì không bị mất tất cả các bản sao. Ban đầu, dân máy tính chuyên nghiệp sao chép các file ra băng từ. Chép file vào băng từ và đọc từ băng ra chậm hơn đọc từ đĩa cứng rất nhiều nhưng băng từ rẻ hơn đĩa cứng nhiều lần nên có thể dùng để sao chép nhiều bản mà không quá tốn kém. Dân không chuyên thì không có ổ đọc/ghi băng và cũng không cần chép file ra nhiều bản nên đã chép ra đĩa mềm, rồi CD-Recordable, CD-Rewritable, DVD-Recordable, DVD-Rewritable rồi USB drive hoặc portable hard drive.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Khoảng 30 năm trước, do ở Việt Nam không có đủ phương tiện, nhiều người dùng máy tính dù là chuyên nghiệp cũng không làm việc backup quan trọng đó và không ít người phải chịu hậu quả của việc mất file.
   Tôi cũng đã hơn một lần bị như vậy. Lần đầu tiên tôi bị mất file là khi làm đồ án tốt nghiệp ngành máy tính ở trường Đại học Bách Khoa năm 1987. Hồi đó các thầy cấp cho hai sinh viên dùng chung một đĩa mềm 360KB. Máy tính của trường thì chỉ có một ổ đĩa mềm, máy sẽ nhắc người dùng khi thì cho đĩa chứa compiler vào ổ đĩa, khi thì cho đĩa chứa program đang soạn vào ổ đĩa.
@@ -262,32 +245,15 @@ data-ad-slot="3830899615">
   <br>Từ khi dùng cloud storage tôi không còn lo đĩa cứng hay USB drive bị hư bất ngờ nữa. Tôi cũng không sợ việc xoá nhầm file vì cloud storage giữ lại nhiều version của từng file.
   <br>Một điều tiện lợi nữa khi dùng cloud storage là ta có thể cài lại máy nhanh chóng vì tất cả các file cần giữ đã luôn luôn được backup sẵn.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Dịch vụ cloud storage miễn phí cũng có một vấn đề là một ngày nào đó nhà cung cấp chấm dứt hoạt động. Khoảng 4-5 năm trước tôi dùng cloud storage copy.com, đến Tháng 3/2016 họ thông báo rằng sẽ ngưng hoạt động vào Tháng 5/2016, tôi đã phải di cư sang pcloud.com. Rút kinh nghiệm lần đó, bây giờ tôi không trung thành với một nhà cung cấp cloud storage nữa mà dùng nhiều hơn một. Nhưng để dùng nhiều hơn một cloud storage thì phải cẩn thận, phải làm sao cho các bản của file ở trong máy và trong từng cloud là giống nhau. Và việc này càng rắc rối hơn khi người dùng có nhiều máy: máy điện thoại, máy tính xách tay, máy tính để bàn… Phải làm sao cho khi dùng bất kỳ máy nào cũng dùng được đúng file có nội dung mới nhất.</p>
   <h2>Quy tắc sử dụng</h2>
@@ -299,32 +265,15 @@ data-ad-slot="3830899615">
   <div><amp-img alt="Files in clouds" src="/images/FileInCloud.svg" width="960" height="600" layout="responsive"></amp-img></div>
   <p>Trong sơ đồ trên, mũi tên chỉ hướng di chuyển của nội dung; máy tính và cloud tô màu xanh là chính, màu vàng là phụ, chính thì chỉ có một nhưng phụ thì có thể có nhiều.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Quy trình cụ thể với file hình:</p>
   <ul>
@@ -349,32 +298,15 @@ data-ad-slot="3830899615">
   <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
   </div>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
