--- a/kinh-nghiem/may-tinh/googlemaps.html
+++ b/kinh-nghiem/may-tinh/googlemaps.html
@@ -231,32 +231,15 @@ data-ad-slot="5275186684">
   <p>Bây giờ chỉ còn một loại thông tin tương đối đúng trong Google Maps là thông tin giao thông dùng để tìm đường đi. Người ta có thể dùng app Google Maps trong smartphone để tìm đường đi từ A đến B bằng các phương tiện: hai cẳng, hai bánh, bốn bánh, sáu bánh (xe buýt), hoặc gọi Grab. Nếu điểm A và B được định vị chính xác thì Google Maps đề nghị lộ trình ngắn nhất, nếu lúc đó Google Maps có nối đến server qua Internet thì nó sẽ biết được tình trạng lưu thông tức thời và tìm ra đường đi nhanh nhất. Có rất nhiều app trên smartphone dùng data của Google Maps để hoạt động.</p>
   <p>Không những chỉ đường trên màn hình, <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.maps" target='_blank'>app Google Maps trong smartphone</a> còn chỉ đường bằng tiếng nói. Ta chỉ cần đeo headphone vào tai, bỏ smartphone trong túi, Google Maps sẽ nói đi thẳng, sắp quẹo, quẹo ngay… Tôi rất thường dùng Google Maps theo cách này khi sắp đi đến chỗ lạ.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h3>Cần đánh dấu địa điểm chính xác</h3>
   <p>Tuy nhiên, nếu người dùng chỉ có địa chỉ và không biết chính xác vị trí điểm B thì rất dễ đi đến sai chỗ vì địa chỉ ở Việt Nam rất rối. Trường hợp người ta đặt xe Grab đến điểm B theo địa chỉ có thể dẫn đến những tình huống phiền phức: người đặt xe và người lái xe Grab không cùng nghĩ giống nhau.</p>
@@ -272,32 +255,15 @@ data-ad-slot="3830899615">
   </ol>
 <p>Mỗi Plus codes chỉ đến một khu vực khoảng 14m*14m. Việt Nam có ứng dụng <a href="https://vpostcode.vn" target='_blank'>Vpostcode</a>, kéo dài Plus codes thêm một chữ để chỉ đến một khu vực 3m*3m.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h3>Đặt xe Grab từ Google Maps</h3>
   <p>Khi đã có toạ độ B chính xác, ta để cho Google Maps app tìm đường đến B theo cách gọi Grab rồi chọn mở Grab từ Google Maps, Grab sẽ có thông tin chính xác của nơi cần đến. Tôi đã có lần ngồi ở C và đặt Grab cho người nhà đi từ A đến B một cách dễ dàng trong khi người nhà không biết địa chỉ B lẫn đường đi đến B. Một lần khác, tôi đi đến điểm hẹn gặp một người bạn bằng cách đeo headphone rồi nghe theo chỉ dẫn của Google Maps app đi đến địa điểm mà bạn đã gửi link cho tôi.</p>
@@ -324,32 +290,15 @@ data-ad-slot="3830899615">
   </div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
