--- a/kinh-nghiem/may-tinh/oss.html
+++ b/kinh-nghiem/may-tinh/oss.html
@@ -248,32 +248,15 @@ data-ad-slot="5275186684">
 <li>Đồng hồ chuẩn</li>
 <li>Phone server (tổng đài điện tử với các chức năng hội nghị, thư thoại…)</li></ul>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <h2>Giải pháp không tốn phí bản quyền</h2>
 <p>Với hệ điều hành Linux và các phần mềm mã nguồn mở, hầu hết mọi nhu cầu kể trên đều được thoả mãn mà không tốn tiền mua bản quyền.</p>
@@ -286,32 +269,15 @@ data-ad-slot="3830899615">
 <ul><li>các phần mềm CAD như vẽ mạch in, vẽ kỹ thuật</li></ul>
 <p>Một số chương trình khác hoàn toàn phải lệ thuộc vào MS Windows.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <h2>Những việc mà phần mềm mã nguồn mở làm tốt</h2>
 <h3>Tổng đài điện thoại nội bộ</h3>
@@ -322,32 +288,15 @@ data-ad-slot="3830899615">
 <p>Không những tiết kiệm, mà tính năng của tổng đài IP vượt xa các tổng đài điện tử bình thường. Những tính năng như hộp thư thoại, trả lời tự động thuộc vào loại xa xỉ ở các tổng đài điện tử còn ở tổng đài IP thì đều có sẵn không tốn tiền. Ví dụ một tính năng tuy tầm thường nhưng rất tiện của tổng đài IP, đó là đánh số máy nội bộ. Ở tổng đài điện tử, số nội bộ phải đặt trong một khoảng giới hạn nên chỉ là những con số liên tiếp khó nhớ (số không đẹp), mỗi khi nhân viên đổi chỗ trong cơ quan thì phải đổi số nội bộ hoặc phải program lại tổng đài cho số đi theo chỗ mới. Trong tổng đài IP, số nội bộ không bị hạn chế gì hết nên có thể đặt theo chữ viết tắt của tên người, như vậy không cần phải nhớ số mà chỉ cần nhớ tên là gọi được ngay. Và chuyện dời chỗ của nhân viên cũng không phải để ý tới nữa, máy tính ở đâu thì máy điện thoại nội bộ tự động theo đến đó.</p>
 <p>Nhưng VoIP có di động được như máy điện thoại không dây không? Sếp chỉ thích dùng điện thoại nội bộ không dây thôi. Điện thoại VoIP dựa trên mạng nội bộ; ngày nay, nhiều văn phòng cũng đã dùng mạng nội bộ không dây Wi-fi. Với mạng Wi-fi và máy tính xách tay, sếp đã có ngay máy điện thoại nội bộ không dây. Hay hơn nữa là các máy điện thoại di động có Wi-fi, một máy như vậy vừa dùng được như điện thoại di động vừa làm điện thoại nội bộ không dây.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <p>Sóng Wi-fi đang dần dần lan ra khỏi mạng nội bộ của cơ quan; nhiều nơi trong thành phố đã được phủ sóng Wi-fi để hoà vào Internet, các ISP đang ráo riết phủ sóng Wi-fi khắp thành phố để thu hút khách hàng. Với sự tiện nghi đó, tổng đài IP nội bộ cũng vươn ra khỏi cơ quan. Bất cứ nơi nào có sóng Wi-fi là máy tính (hay điện thoại di động) có thể nối vào tổng đài IP nội bộ và người cầm máy có thể nói chuyện như đang ở văn phòng. Hãy tưởng tượng sếp đi công tác, khi cần nói chuyện với cấp dưới chỉ cần tìm một chỗ có Internet (thậm chí là dial-up) là có thể thoải mái nghe cấp dưới báo cáo mà không tốn tiền điện thoại di động. Một ví dụ nữa là nhân viên xuất nhập khẩu cần liên lạc với đối tác ở châu Âu hay Mỹ, hết giờ làm việc cứ về nhà mở máy tính nối vào tổng đài IP làm việc như ở văn phòng.</p>
 <p>Nếu đối tác cũng dùng tổng đài IP thì các máy nội bộ trong hai tổng đài có thể gọi lẫn nhau mà không phải tốn tiền điện thoại dù cho đối tác ở trong nước hay ngoài nước.</p>
