--- a/kinh-nghiem/may-tinh/phan-mem-tu-do.html
+++ b/kinh-nghiem/may-tinh/phan-mem-tu-do.html
@@ -233,32 +233,15 @@ Bản quyền không bảo vệ ý tưởng nhưng cách thể hiện ý tưởn
 <p>
 <u>Quyền sử dụng phần mềm (software license)</u>: là những điều được phép và không được phép mà người sở hữu phần mềm đặt ra đối với người được cấp phần mềm hợp pháp (người mua hay người dùng, trong bài này gọi chung là người dùng).</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <p>
 <u>Hợp đồng sử dụng phần mềm (software license agreement, End-User License Agreement)</u>: Hợp đồng giữa bên làm ra phần mềm và bên mua phần mềm. Phần lớn các hợp đồng sử dụng các phần mềm đóng hộp sẵn được hiện ra cho người dùng xem khi cài đặt phần mềm và người dùng chỉ có quyền chấp nhận hay không chấp nhận hợp đồng. Ngoài các điều khoản về quyền sử dụng phần mềm, hợp đồng  sử dụng phần mềm còn quy định trách nhiệm của hai bên, chế độ bảo hành… Ví dụ EULA của Microsoft Windows XP nêu rõ Microsoft và những người bán sản phẩm này không chịu trách nhiệm về bất kỳ thiệt hại nào xảy ra khi dùng sản phẩm hoặc do sản phẩm không làm việc…<br />
@@ -267,32 +250,15 @@ Qua hợp đồng sử dụng phần mềm, nhiều quyền lợi của người
 <u>Copyleft</u> (Việt ngữ chưa có từ này): copyleft không phải là một loại bản quyền, nó là một cách tổng quát để một phần mềm hay một sản phẩm nào đó được <i>tự do</i> và bảo đảm rằng <i>tất cả những sửa đổi tiếp theo</i> của phần mềm đó cũng được tự do. Để copyleft một phần mềm (tức là để nó được tự do), đầu tiên người sở hữu tuyên bố rằng nó đã được bảo vệ dưới <b>bản quyền</b>, kế đó thêm vào <i>điều khoản phân phối</i> quy định rằng <i>mọi người</i> có quyền dùng, sửa đổi và phân phối lại phần mềm này hay những bản sửa đổi tiếp theo của nó <b>với điều kiện là không được thay đổi điều khoản phân phối</b>. Copyleft do Phong trào Phần mềm Tự do đề ra.
 </p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <h2>Phong trào Phần mềm Tự do là gì?</h2>
 Khoảng năm 1976 trở về trước, phần mềm thường được bán cả mã nguồn lẫn mã nhị phân, và lập trình viên thường truyền cho nhau những mã nguồn để giúp nhau trong công việc. Nhưng công nghiệp phần mềm phát triển lên, các công ty phần mềm bảo vệ lợi nhuận bằng cách gia tăng việc bảo vệ mã nguồn, lập trình viên phải ký với công ty bản cam kết không tiết lộ bí mật (gồm có mã nguồn). Năm 1985, Richard Stallman khởi xướng Phong trào Phần mềm Tự do để vận động cho tự do sử dụng phần mềm, gồm cả việc sửa đổi, phân phối lại phần mềm.
@@ -307,32 +273,15 @@ Nhiều người vẫn <strong>hiểu lầm</strong> rằng tinh thần của ph
 Vậy mọi người đều có quyền bán phần mềm tự do, ngay cả những phần mềm <strong>không tự làm ra</strong> và được khuyến khích thu nhiều tiền khi phân phối phần mềm tự do, nhiều đến mức có thể thu được. Nghe lạ quá phải không! Mọi người được khuyến khích kiếm lời từ phần mềm tự do và trích một phần lợi nhuận đó đóng góp cho Phong trào Phần mềm Tự do.
 </p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <h2>Vậy nếu bán phần mềm tự do với giá cao thì làm sao phần mềm tự do được phổ biến đến nhiều người?</h2>
 Một phần mềm bị sở hữu được bán với giá cao thì sẽ có ít người được dùng. Nhưng phần mềm tự do được bán với giá cao vẫn có thể có nhiều người dùng. Đó là vì có nhiều cách hợp pháp để có được phần mềm tự do. Người ta có thể chép lại từ bạn mình, hoặc nhiều người hùn nhau lại mua một bản về để tất cả đều được dùng.
@@ -342,32 +291,15 @@ Vì có nhiều cách để được dùng phần mềm tự do nên giá cao kh
 <h2>Phần mềm mã nguồn mở có phải là phần mềm tự do?</h2>
 Có một số quy định (ràng buộc) về quyền sử dụng phần mềm mã nguồn mở không được Phong trào Phần mềm Tự do chấp nhận. Tuy nhiên trong thực tế thì hai loại này rất gần nhau và hầu hết các phần mềm mã nguồn mở là phần mềm tự do. Và GNU General Public License của Phong trào Phần mềm Tự do chính là một trong những giấy phép theo định nghĩa của phần mềm mã nguồn mở.
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <h2>Có bao nhiêu giấy phép sử dụng phần mềm mã nguồn mở?</h2>
 Có hơn 50 giấy phép sử dụng phần mềm mã nguồn mở đã được đặt ra bởi các tổ chức khác nhau. Sau đây là một vài giấy phép của các tổ chức nổi tiếng nhất:
@@ -518,32 +450,15 @@ Có hơn 50 giấy phép sử dụng phần mềm mã nguồn mở đã được
 </table>
 </div>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <h2>Những điều cần chú ý khi dùng phần mềm tự do</h2>
 Người dùng không rành phần mềm sẽ cần giúp đỡ khi dùng. Nếu người dùng lấy được phần mềm tự do một cách miễn phí thì sẽ không có ai có trách nhiệm giúp đỡ, chỉ có thể tìm sự giúp đỡ tự nguyện ở các cộng đồng người dùng phần mềm tự do. Nếu cần một sự giúp đỡ chuyên nghiệp, thì người dùng nên mua phần mềm tự do từ các nhà phân phối để nhận được sự bảo đảm giúp đỡ khi cần.
