--- a/kinh-nghiem/may-tinh/protect.html
+++ b/kinh-nghiem/may-tinh/protect.html
@@ -229,32 +229,15 @@ data-ad-slot="5275186684">
 <br>Những tài sản số hoá đó được tạo ra và giữ trong thẻ nhớ, USB drive, ổ đĩa cứng, smartphone… và chúng rất dễ bị mất đi vì vật chứa bị mất hay hư bất ngờ hoặc người chủ lỡ tay xoá mất.</p>
 <p>Ngoài ra, ngày càng có nhiều file do chúng ta tạo ra nhưng không được giữ trong tay chúng ta mà nằm trong các cloud server của các nhà cung cấp dịch vụ như Google, Facebook, Dropbox… Chúng ta giữ những file đó bằng password, mất password là mất hết file. Password giống như một cái chìa khoá để mở cái tủ chứa tài sản số hoá.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <h3>Chống rủi ro hư hoặc mất</h3>
 <p>Những tài sản số hoá do cá nhân tự giữ trong thẻ nhớ, USB drive, ổ đĩa cứng… có thể bị hư hoặc mất. Để phòng ngừa hư và mất thì chúng ta chép các file đó ra nhiều nơi, nhưng chép ra nhiều nơi rồi thì chúng ta phải nhớ nơi nào chứa file mới nhất, nơi nào cũ hơn. Cách tiện lợi nhất bây giờ là để cho file tự động được chép vào đám mây, các dịch vụ đám mây tự động giữ nhiều version của từng file từ cũ đến mới nhất. Chúng ta có thể dùng các dịch vụ <a href="cloudstorage">cloud storage</a> miễn phí, hoặc có trả tiền hàng tháng hay hàng năm, hoặc trả tiền một lần để dùng mãi mãi, hoặc chúng ta <a href="privcloudstor">tự tạo một cloud storage</a> để dùng.</p>
@@ -278,32 +261,15 @@ data-ad-slot="3830899615">
 <p>Làm sao nhớ hết được quá nhiều password thật rắc rối ở quá nhiều nơi như vậy?</p>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <h3>Chống quên</h3>
 <p>Một cách đơn giản để nhớ hết password là dùng chung một password ở tất cả các nơi 😉.
@@ -318,32 +284,15 @@ data-ad-slot="3830899615">
 <p>App KeePass trong smartphone Android mở được file trong các cloud storage server Dropbox, Google Drive, OneDrive, OwnCloud, Nextcloud, PCloud và WebDav, SSH, FTP. KeePass tự động sao một bản của database và làm việc trên bản sao đó. Nếu bạn thêm hay sửa vào KeePass database, KeePass sẽ synchronize bản sao đó với bản chính trong cloud storage server. Như vậy bạn không cần synchronize bằng các app cloud storage client.</p>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <h3>Đề phòng bị trộm password</h3>
 <p>Ngoài rủi ro quên mất password, còn có rủi ro bị người khác biết được password. Việc mất trộm password thường là do bị lừa:</p>
@@ -370,32 +319,15 @@ Ngoài việc dùng password để login vào các dịch vụ web, password cò
 </ul>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <h2 id="twofactor">Bảo vệ hai lớp (Two Factor Authentication)</h2>
 <p>Một số dịch vụ tăng mức độ bảo vệ lên bằng cách dùng thêm password thứ hai, sau khi server đã nhận được password thứ nhất đúng rồi, nó hỏi thêm password thứ hai để chắc chắn rằng người trả lời thật sự là chủ tài khoản, <i>không những <b>biết</b> password mà còn đang <b>giữ</b> một vật của riêng chủ tài khoản</i>. Password thứ hai thay đổi liên tục theo thời gian và mỗi password chỉ có hiệu lực trong vài phút, nó gọi là One Time Password. Có hai cách để có OTP mà gõ vào.</p>
@@ -419,32 +351,15 @@ data-ad-slot="3830899615">
 <br>Biện pháp này chặt chẽ như vậy nhưng cũng không bảo vệ tuyệt đối được. Đã có trường hợp trong khi ngủ chủ tài khoản bị người cùng nhà dùng đầu ngón tay để thực hiện giao dịch chuyển tiền đi mất. Trong trường hợp không tin tưởng người cùng nhà thì nên tắt hoặc cất smartphone vào trong két sắt khi đi ngủ.</p>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <h2>Di sản số</h2>
 <p>Những tài sản có một giá trị nào đó (vật chất hay tinh thần) đều cần phải được truyền lại khi người chủ tài sản qua đời, không nên để bị quên lãng giống như những trường hợp chôn vàng dưới nền nhà mà người nhà không biết.
@@ -474,32 +389,15 @@ Có trường hợp nhân viên tính tiền ở cửa hàng cố nhớ hết th
   <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
   </div>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
