--- a/kinh-nghiem/may-tinh/spam-call.html
+++ b/kinh-nghiem/may-tinh/spam-call.html
@@ -238,32 +238,15 @@ Chúng ta có mắng chửi hay đề nghị người gọi xoá số thì vẫn
   <br>Những nhân viên tham tiền ở các nơi cung cấp dịch vụ (công ty địa ốc, ngân hàng, công ty du lịch, trường học…) đã lén lấy danh sách khách hàng bán cho những đầu nậu. Chính vì vậy trong danh sách có ghi rõ bạn đã từng mua nhà ở dự án nào, bạn đã từng giao dịch ở chi nhánh ngân hàng nào, con bạn học trường nào…</p>
   <p>Bị làm phiền thì người dùng phải tìm cách ngăn ngừa. Nhưng người ta vốn rất linh hoạt trong việc vận dụng/lạm dụng mọi phương tiện để đạt được mục tiêu cho nên luôn luôn tìm những cách để vượt qua những biện pháp ngăn ngừa. Những biện pháp ngăn ngừa đơn độc của từng người đã tỏ ra không hiệu quả. Bây giờ, qua mạng Internet, mọi người có thể hợp sức ngăn chặn những cuộc gọi tiếp thị không mong muốn hiệu quả hơn. Số điện thoại của nạn nhân bị rao bán trên Internet thì nạn nhân sẽ đưa số điện thoại của spammer vào Internet luôn 😄.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Đưa spammer vào đám mây</h2>
   <div class="flright"><amp-img alt="Màn hình app Showcaller" src="/images/BlockedCall.jpg" width="360" height="240" layout="responsive"></amp-img></div>
@@ -278,32 +261,15 @@ data-ad-slot="3830899615">
   <br>Các spammer thường dùng một số điện thoại khác để gọi, ngoài số chính của họ. Các số điện thoại đó cũng sẽ nhanh chóng bị chặn nếu cộng đồng chống spam tích cực. Tóm lại là, nếu chúng ta cùng tích cực ngăn chặn thì sự lạm dụng sẽ bị vô hiệu hoá.</p>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <amp-accordion>
 <section>
@@ -331,32 +297,15 @@ data-ad-slot="3830899615">
   </div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
