--- a/kinh-nghiem/may-tinh/tai-khoan-google.html
+++ b/kinh-nghiem/may-tinh/tai-khoan-google.html
@@ -226,32 +226,15 @@ data-ad-slot="5275186684">
 <p>Một dịch vụ miễn phí rất tốt của Google là Google Drive. Google Drive cho phép tạo ra, upload, sửa, chia sẻ tới 15GB các loại file văn bản, bảng tính, trình bày, pdf, hình, âm thanh… Thay vì gửi file cho đối tác xem, bạn có thể để file trong Google Drive và gửi link cho đối tác. Bạn cũng có thể cho phép đối tác sửa vào file, có thể xem lại các bản cũ hơn của file… Công cụ <a href="/huu-ich/ke-hoach-tai-chinh/" target="_blank">Kế hoạch tài chính</a> được soạn để dùng với Google Drive.
 <br>Để dùng Google Drive và nhiều dịch vụ khác của Google, bạn cần một tài khoản Google. Thông thường tài khoản Google được tạo ra khi bạn dùng GMail lần đầu. Nếu bạn đang dùng và hài lòng với một dịch vụ thư khác, ví dụ như Yahoo, bạn không muốn có thêm một hộp thư trong GMail, bạn vẫn có thể có một tài khoản Google gắn với hộp thư điện tử đang dùng. Sau đây là cách tạo tài khoản Google gắn với hộp thư Yahoo.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <h2>Bước 1: Đăng ký</h2>
 <p>Mở trang web www.google.com trong web browser (Chrome, Firefox, Internet Explorer, Safari), bạn sẽ thấy tương tự như hình 1</p>
@@ -269,32 +252,15 @@ data-ad-slot="3830899615">
 <br>Bấm vào <b>Next step</b>, bạn sẽ thấy tương tự hình 5</p>
 <div><amp-img alt="Hình 5" src="/images/Google0527b5.png" width="717" height="459" layout="responsive"></amp-img></div>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <h2>Bước 2: Xác nhận</h2>
 <p>Google cần xác nhận là bạn đang dùng địa chỉ email đã ghi trong bước 1
@@ -310,32 +276,15 @@ data-ad-slot="3830899615">
   </div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
