--- a/y-kien/bi-mat-doi-tu.html
+++ b/y-kien/bi-mat-doi-tu.html
@@ -234,32 +234,15 @@ data-ad-slot="5275186684">
 </p>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 
 <p>Mặc dù suy-nghĩ đơn-giản nhưng tôi không nên sơ-suất để kẻ-gian hại mình. Kẻ-gian thì khá nhiều, và mục-đích của chúng là chiếm-đoạt tài-sản của người khác. Nếu tôi có tài-sản đáng-kể thì sẽ có kẻ tìm cách chiếm-đoạt. Mức-độ đáng-kể rất khác nhau tuỳ theo khả-năng hành-động của từng kẻ-gian, có kẻ chỉ muốn lừa vài chục ngàn đồng, có kẻ chỉ chuyên lừa hàng triệu USD. Người có tài-sản lớn sẽ thu-hút sự-quan-tâm của những kẻ-gian lão-luyện, những kẻ chuyên vạch-ra những kế-hoạch phức-tạp với những chi-tiết rất riêng-tư để chiếm-đoạt tài-sản. Người bình-thường thì chỉ bị những kẻ-gian tầm-thường chú-ý tới, bọn này lặp lại cách lừa nhiều lần với nhiều người nên đều đã được kể lại trong các câu-chuyện cảnh-giác. Người bình-thường nên quan-tâm đến những câu-chuyện cảnh-giác hơn là sợ bị lộ thói-quen hàng-ngày.
@@ -277,32 +260,15 @@ Các bài liên quan:
 </div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
