--- a/y-kien/dung-hang-viet-nam.html
+++ b/y-kien/dung-hang-viet-nam.html
@@ -239,32 +239,15 @@ Phần lớn người tham gia sản xuất <i>hàng Việt Nam</i> là người
 <br>Trong khi đó, có khá nhiều nhà đầu tư nước ngoài sản xuất hàng ở Việt Nam và bán ở Việt Nam, trong trường hợp này thì khoản lợi sẽ không ở lại Việt Nam. Trong xu hướng cổ phần hoá các công ty thì khó phân biệt được một công ty do nhà đầu tư trong nước hay nước ngoài làm chủ vì người Việt Nam cũng có thể trở thành <a href="/huu-ich/de-tien-vao-dau">nhà đầu tư</a> của các công ty nước ngoài như là Taya, và ngược lại người nước ngoài cũng có thể trở thành nhà đầu tư của các công ty cổ phần trong nước như là Kinh Đô. Bạn hãy bắt đầu làm nhà đầu tư để được hưởng lợi khi dùng hàng Việt Nam.</blockquote>
 <p>Như vậy, dùng <i>hàng Việt Nam</i> tức là tạo ra việc làm cho đồng bào của ta, có thể là thân nhân của ta. Ví dụ cụ thể, khi mua hộp bánh Kinh Đô ta làm lợi cho người Việt Nam nhiều hơn khi mua hộp bánh Hongkong hay Mã Lai hay Nhật hay Đan Mạch</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <p>Dùng hàng Việt Nam không những làm lợi cho đồng bào, thân nhân, bạn bè mà còn có thể làm lợi trực tiếp cho chính mình. Nếu bạn đang làm việc tại những công ty cung cấp dịch vụ hay hàng hoá trực tiếp đến người tiêu dùng hoặc nằm trong chuỗi cung ứng thì dùng hàng Việt đem lại lợi nhuận cho công ty bạn, đem lại thu nhập cho bạn. Nếu bạn đang làm việc cho nhà nước thì dùng hàng Việt làm tăng thuế tức là tăng nguồn lương của bạn.</p>
 <p>Nghĩ kỹ hơn thì ta còn có thể xét đến tỉ lệ thành phần Việt Nam trong món hàng, ví dụ như nguồn gốc nguyên liệu làm ra món hàng. Tỉ lệ thành phần Việt Nam trong món hàng càng cao thì đem lại lợi cho ích cho đồng bào càng nhiều. Tuy nhiên, rất khó có thể biết được <i>chính xác</i> tỉ lệ đó, chỉ có thể <i>đoán</i> được trong món hàng có một phần nguyên liệu trong nước hay ngoại nhập.</p>
@@ -302,32 +285,15 @@ Các bài liên quan:
 </div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
