--- a/huu-ich/cau-chuyen/dang-thieng-lieng.html
+++ b/huu-ich/cau-chuyen/dang-thieng-lieng.html
@@ -229,64 +229,30 @@ data-ad-slot="5275186684">
   <br>Hôm sau nữa, nước đã lên đến mái nhà, ông ta đang ngồi trên mái nhà thì thấy một người chèo xuồng đến mời đi. Ông ta vẫn trả lời "tôi chờ Đấng thiêng liêng hiện ra cứu tôi."
   <br>Cuối cùng, ông ta chết, gặp Đấng thiêng liêng liền hỏi "sao một đời con sùng đạo, luôn làm theo lời dạy của ngài mà ngài không đến cứu con?" Đấng thiêng liêng trả lời "ta đã gửi ba người đến cứu con, nhưng con đều từ chối!"</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Câu chuyện này <b>không có thật</b>, nhưng có một điều chắc chắn đúng trong câu chuyện. Đó là ta không thể biết được Đấng thiêng liêng hiện ra dưới hình thức nào, không phải lúc nào cũng có hào quang loé sáng khi Đấng thiêng liêng hiện ra. Đấng thiêng liêng không chỉ cải dạng khi muốn thử lòng người trần, mà khi muốn cứu người cũng vậy.
   <br>Đối với mỗi người Đấng thiêng liêng có thể là Bụt, Chúa, Phật, Thượng Đế, Thánh Allah…</p>
   <p>Bài học rút ra từ câu chuyện này là ta có thể thấy Đấng thiêng liêng dưới bộ dạng của bất kỳ người nào nếu người đó làm và nói <b>lẽ phải</b>, nếu ta không lắng nghe và quay lưng lại với lẽ phải là ta từ chối sự cứu giúp của Đấng thiêng liêng.
   <br>Liệu có phải Đấng thiêng liêng khiến tư vấn viên bảo hiểm đến khuyên chúng ta chia sẻ hoạn nạn với người khác? Tư vấn viên bảo hiểm chỉ muốn chia sẻ với mọi người những cách để bảo vệ và gia tăng tài sản gia đình, và chia sẻ hoạn nạn với những người khác trong khi bảo vệ tài sản gia đình mình. Những người từ chối chia sẻ hoạn nạn với người khác cũng đã từ chối sự cứu giúp của Đấng thiêng liêng. Họ không sẵn sàng chia sẻ một ít tiền với những đồng bào đang gặp hoạn nạn thì làm sao họ được Đấng thiêng liêng cứu giúp khi gặp hoạn nạn.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Có người nói rằng "tôi vẫn đang làm từ thiện đều đặn, tôi cho bệnh nhân bữa ăn, tôi cứu trợ đồng bào gặp thiên tai, sau này tôi sẽ không gặp phải hoạn nạn."
   <br>Xin thưa rằng Đấng thiêng liêng không khẳng định như vậy. Nếu đúng như vậy thì những người gặp nạn chỉ toàn là người ác thôi. Thực tế là vẫn có nhiều người tốt gặp nạn đó thôi.
@@ -295,32 +261,15 @@ data-ad-slot="3830899615">
   <p>Có người nói rằng "tiền đóng vào bảo hiểm chỉ đem chia cho người khá giả, tôi chỉ muốn giúp người nghèo thôi."
   <br>Thưa rằng không phải chỉ người khá giả mới tham gia bảo hiểm, có những người nghèo tham gia bảo hiểm với <a href="http://www.manulife.com.vn/thong-cao-bao-chi-186/huong-ung-nam-gia-dinh-viet-nam-2013-manulife-viet-nam-tang-114-hop-dong-bao-hiem-vi-mo-cho-phu-nu-n-569.aspx" target="_blank">mức đóng chưa tới một ngàn đồng mỗi ngày</a>, những người đó cũng sẽ nhận được khoản chia sẻ nếu chẳng may gặp nạn.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Có người nói rằng "tôi không có tiền để chia sẻ." Tư vấn viên có thể chỉ cho bạn lấy tiền ở đâu để chia sẻ và <a href="/huu-ich/tich-luy">để dành cho chính gia đình bạn</a> trong tương lai.</p>
   <p>Có người nói rằng "tôi không muốn đem tiền của tôi trả hoa hồng cho tư vấn viên, trả như vậy là quá nhiều." Có khi nào bạn đi rửa xe mà bạn chỉ muốn trả 1/3 mức giá vì xe bạn chưa dơ nhiều không? Bạn chỉ có thể tự rửa xe để không phải trả đồng nào.
@@ -339,32 +288,15 @@ data-ad-slot="3830899615">
   </div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
