--- a/huu-ich/cau-chuyen/kakeibo.html
+++ b/huu-ich/cau-chuyen/kakeibo.html
@@ -235,32 +235,15 @@ data-ad-slot="5275186684">
   <p>Nhiều người đã đồng ý rằng thay đổi thói quen tài chính xấu không hề dễ, một phần bởi vì thói quen chi tiêu gắn chặt vào cuộc sống hàng ngày và hành động chi tiêu cũng có tác động đến cảm xúc nên khó dứt bỏ nó.</p>
   <p>May mắn thay, trong 116 năm qua kakeibo đã giúp đỡ nhiều người có những quyết định đúng về tài chính.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Chỉ cần bút và sổ, không cần máy móc hiện đại</h2>
   <p>Cũng như mọi hệ thống quản lý ngân sách khác, ý tưởng chính của kakeibo là giúp bạn hiểu mối liên quan giữa bạn và tiền của bạn bằng cách duy trì một sổ ghi tất cả mọi món tiền nhận được và tiêu đi.</p>
@@ -280,32 +263,15 @@ data-ad-slot="3830899615">
   <p>Nói cách khác, cuối cùng tôi đã chinh phục được nỗi sợ về độ thành thật khi nói “cần” hay “muốn”. Nhờ vậy tôi đã đưa ra quyết định mua hay không mua nhanh hơn và đúng hơn.</p>
   <p>Cần chú ý rằng kakeibo không nhằm cắt bỏ hết mọi niềm vui trong cuộc sống của bạn. Nếu bạn đang cảm thấy buồn, bạn có thể tự làm mình vui với những thứ không đắt đỏ như bó hoa. Thay vì yêu cầu bạn làm những điều rất quyết liệt, phương pháp này chỉ nhằm làm cho bạn thay đổi những thói quen xấu một cách có ý thức và từ từ.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Chi tiêu có ý thức như thế nào</h2>
   <p>Để thấy được kết quả tiết kiệm đáng kể, điều quan trọng là phải giữ cam kết luôn luôn tự hỏi những câu hỏi trên trước khi mua những thứ không thiết yếu.</p>
@@ -331,32 +297,15 @@ data-ad-slot="3830899615">
   </div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
