--- a/huu-ich/cau-chuyen/mua-nha-hay-dau-tu.html
+++ b/huu-ich/cau-chuyen/mua-nha-hay-dau-tu.html
@@ -233,32 +233,15 @@ data-ad-slot="5275186684">
   <p>Nhưng thực tế là, bất động sản không phải là con đường duy nhất để gia tăng tài sản; <a href="nhung-quyet-dinh-tot-cho-tuoi-gia">đầu tư đều đặn</a> là chìa khoá để trở nên giàu. Tổng cộng 500 công ty lớn nhất thị trường chứng khoán New York S&amp;P 500 lời 1104,264% từ năm 1940 đến 2015, nghĩa là 7,42% mỗi năm.
   <br>Thử tưởng tượng một người đầu tư 30.600USD trong năm 1940 và để yên đó. Lãi kép 7,42%/năm trong 60 năm sẽ cho ra số tiền 2.243.005,35USD!</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Logic cá nhân thích đầu tư hơn</h2>
   <p>Tất nhiên tính như trên là đơn giản hoá quá mức. Có những yếu tố như là người tìm mua nhà năm 1940 chưa chắc có ngay 30.600USD để đưa vào cổ phiếu và mặt khác cũng cần chỗ để ở. Nhưng ít ra thì con số trên cho thấy sức mạnh của lãi kép, một trong những điều kỳ diệu trên đời.
@@ -275,32 +258,15 @@ Chi phí dời nhà thì như nhau dù cho dời từ nhà thuê hay dời từ 
     <br>Khi bạn đi thuê nhà, những biến động của thị trường bất động sản không ảnh hưởng nhiều. Giá cho thuê chắc chắn là có tăng theo thời gian, nhưng bạn không bị lỗ khi phải bán nhà không đúng lúc. Thêm nữa, nếu giá cho thuê tăng quá, bạn có thể tìm nơi khác để thuê.</li>
   </ul>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Có tiền nghĩa là có nhiều lựa chọn</h2>
   <p>Nếu sở hữu hoàn toàn một ngôi nhà lúc về hưu thì thật lý tưởng, tôi tin rằng nó cũng lý tưởng ngang với một đống tiền trong ngân hàng. Tại sao? Vì tôi thích có nhiều lựa chọn. Càng có nhiều lựa chọn càng tốt.
@@ -311,32 +277,15 @@ data-ad-slot="3830899615">
   <br>Chúng ta đều giống nhau ở chỗ là phải tích luỹ cho tương lai và trở nên giàu có để cuộc sống càng ngày càng dễ chịu hơn. Đối với tôi, một tài khoản đầu tư đầy ắp để có thể làm bất cứ điều gì thì thích hơn một căn nhà.
   <br>Bởi vì đối với tôi, căn nhà không chỉ là một tài sản mà còn là một trách nhiệm phải mang. Còn có tiền thì có nhiều lựa chọn.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <h2>Ghi chú</h2>
@@ -358,32 +307,15 @@ Nhiều người vẫn nghĩ rằng giá cái nhà sẽ tăng. Tôi tin là giá
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132811370905210880" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/486673791498234" rel="nofollow" target="_blank">Facebook</a></div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
