--- a/huu-ich/dau-tu-co-phieu/index.html
+++ b/huu-ich/dau-tu-co-phieu/index.html
@@ -234,32 +234,15 @@ data-ad-slot="5275186684">
   <br>Trong bài <a href="http://www.efficientfrontier.com/ef/997/dca.htm" target='_blank'>DCA</a>, tác giả Bill Jones đã so sánh hiệu quả của cách đầu tư DCA với cách đưa hết tiền vào cổ phiếu một lượt (lump-sum). Dưới đây là bản dịch của bài đó.
   <br>Phương pháp bình quân giá cổ phiếu chỉ là một phần trong quyết định đầu tư cổ phiếu, một phần quan trọng và khó khăn khác là chọn <b>cổ phiếu tốt</b>. Để tránh rủi ro khi chọn sai cổ phiếu thì những người không chuyên sẽ thuê những chuyên viên tài chính bằng cách đầu tư qua các <a href="quy-dau-tu">quỹ đầu tư</a>.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="title">Đừng DCA quá 12 tháng</div>
@@ -276,32 +259,15 @@ data-ad-slot="3830899615">
   <br>Một cách tương tự: Chia số tiền ban đầu thành N phần bằng nhau. Đưa phần đầu tiên vào thị trường cổ phiếu. Để phần thứ hai trong thị trường tiền tệ một tháng rồi mới đưa nó và lãi của nó sang thị trường cổ phiếu. Để phần thứ ba trong thị trường tiền tệ hai tháng rồi mới đưa nó và lãi của nó sang thị trường cổ phiếu… Như vậy lượng tiền được đưa vào thị trường cổ phiếu tăng đều về số tiền, nhưng chúng bằng nhau khi quy về thời điểm ban đầu (time-value-adjusted).
   <br>Câu hỏi: Làm thế nào để đo độ rủi ro mà chúng ta muốn chống đỡ bằng DCA? Tôi hình dung rằng điều cần phải tránh nhất là đưa hết một cục tiền vào thị trường cổ phiếu rồi vài tháng sau thấy rằng giá trị của nó bị giảm. Đương nhiên, khi chúng ta đưa 10.000$ một lúc vào TTCK, chúng ta hy vọng nó sẽ trở thành 11.000$ hay 12.000$ sau một năm. Nếu chỉ được có 10.500$ thì cũng không quá tệ; chúng ta có thể có kết quả tương đương khi để trong thị trường tiền tệ. Nếu cuối cùng vẫn chỉ có 10.000$ thì thật thất vọng và đáng giận, nhưng chúng ta đã biết rằng đầu tư cổ phiếu không phải chắc chắn có lời. Lo sợ, thất vọng, giận dữ, và hối tiếc xảy ra khi chúng ta có được ít hơn con số ban đầu.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Với DCA-36, tôi đã xem lại 493 chu kỳ 36 tháng trong 44 năm (1953-1996). Tôi đã tính được rằng dùng DCA-36 sẽ tốn 7,4% số tiền so với cách đưa ngay một cục tiền.
   <br>Nhưng sự tốn kém không phải là yếu tố cần xem xét duy nhất. Chúng ta phải xem xét nguy cơ lỗ. Chú ý: Lợi nhuận TTCK tính ở đây dựa trên lợi nhuận của cac công ty S&amp;P500 với cổ tức được đầu tư trở lại. Lợi nhuận thị trường tiền tệ được tính theo lãi suất kỳ hạn 3 tháng. TTCK tăng khoảng hơn 5% mỗi năm trong 44 năm đó; cách đầu tư DCA-36 làm cho tiền nằm ngoài thị trường chứng khoán trung bình khoảng 17,5 tháng, tức là khoảng 1,5 năm, như vậy cách đầu tư theo kiểu đưa ngay một cục tiền sẽ lợi hơn DCA-36 khoảng 1,5 lần 5%.
@@ -326,32 +292,15 @@ data-ad-slot="3830899615">
   <br>Trong 32 trường hợp mà cách đưa ngay một cục tiền bị lỗ hơn 10%, DCA-6 cho kết quả tốt hơn trong 30 trường hợp, 26 lần tốt nhiều hơn 5%.
   <br>Trong 3 trường hợp mà cách đưa ngay một cục tiền lỗ hơn 20% thì DCA-6 tốt hơn 6% tới 11%.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Kết luận</h2>
   <p>DCA-6 giúp đáng kể trong việc tránh lỗ khi đưa ngay một cục tiền vào TTCK rồi lỗ mất hơn 10% trong 6 tháng, có một chi phí nhỏ là 1,11%. Tuy nhiên chỉ có 15 trường hợp DCA-6 tốt hơn từ 10% trở lên so với cách đưa ngay một cục tiền, và trường hợp tốt nhất chỉ hơn 19,9%, bạn đã phải trả 1,11% chi phí để bảo vệ trong 3% số trường hợp. Kết quả không thật xuất sắc.</p>
@@ -381,32 +330,15 @@ data-ad-slot="3830899615">
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132806720084893697" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375958095903138" rel="nofollow" target="_blank">Facebook</a></div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
