--- a/huu-ich/nghi-luc.html
+++ b/huu-ich/nghi-luc.html
@@ -233,32 +233,15 @@ data-ad-slot="5275186684">
     <p>Thật không may là lập kế hoạch ngân sách thì rất chán. Và khi bạn chưa có một bộ công cụ thì bạn sẽ tốn rất nhiều thời gian để lập kế hoạch ngân sách. Bạn sẽ cảm thấy dễ dàng chọn ngồi xem phim thay vì dò lại những khoản chi tiêu.</p>
     <p>Bạn có thể vượt qua khó khăn trong việc lập kế hoạch ngân sách bằng cách chia nhỏ việc đó. Thay vì cố gắng làm hết trong một lần, bạn để mỗi ngày 15 phút để làm dần. Bắt đầu bằng việc ghi thu nhập, tiếp theo là xem lại những giao dịch qua tài khoản, phân loại chúng thành nhóm quan trọng, nhóm không quan trọng, nhóm trả nợ. Sau đó, bạn sẽ xem kỹ nhóm không quan trọng xem bạn có thể thay đổi được gì.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
     <h2>Nghị lực để giảm chi tiêu</h2>
     <p>Khi đã lập kế hoạch ngân sách xong, bạn phải thực hiện nó. Việc này đòi hỏi bạn phải có nghị lực để từ chối những cám dỗ chi tiêu. Đây là một mẹo cho bạn. Sự cám dỗ hưởng thụ tức thời thì mạnh nhất khi nó mới vừa xuất hiện. Bạn đi ngang tiệm cafe Starbucks, và đột nhiên bạn muốn mua một ly cafe 6$. Nhưng nếu bạn đi tiếp thì chỉ vài phút sau là bạn sẽ không còn bị cám dỗ.</p>
@@ -272,32 +255,15 @@ data-ad-slot="3830899615">
       <br>* <a href="ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
     </div>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
