--- a/huu-ich/tich-luy-dai-han.html
+++ b/huu-ich/tich-luy-dai-han.html
@@ -227,32 +227,15 @@ data-ad-slot="5275186684">
   <h2 id="truot_gia">Trượt giá</h2>
   <p>Hầu như ai cũng lo ngại vấn đề trượt giá khi để dành tiền. Trượt giá là một điều khách quan ta phải chấp nhận. Dù muốn hay không ta cũng phải chấp nhận vật giá năm sau cao hơn năm trước không nhiều thì ít. Nếu hôm nay một tô phở giá 50.000 đồng, mười năm sau một tô phở có thể lên đến 100.000 đồng. Như vậy ta phải để dành thứ gì đó mà hôm nay đổi được mười tô phở thì 10-30 năm sau phải đổi được ít nhất mười tô phở. Tại sao phải để dành lâu như vậy thì được giải thích ở <a href="tich-luy">trang này</a>.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h3>Vàng</h3>
   <p>Có một thứ không mất giá mà mọi người đều biết, đó là vàng. Vài năm trở lại đây, do sự bất ổn về kinh tế và chính trị trên thế giới, giá vàng tăng lên rất cao làm cho nhiều người nghĩ rằng giá vàng sẽ <i>tăng nhanh hơn</i> mức trượt giá. Nhưng kết quả nghiên cứu của tác giả Stephen Harmston được Hội đồng Vàng Thế giới xuất bản (<a href="http://www.spdrgoldshares.com/media/GLD/file/research_study_22.pdf" target='_blank'>Gold as a Store of Value</a>) và được trích dẫn trong bài báo đăng trên VnExpress ngày 27/04/2010 (<a href="http://kinhdoanh.vnexpress.net/tin-tuc/vi-mo/bi-an-vang-2704911.html" target="_blank">Bí ẩn vàng</a>) cho thấy giá vàng tính bằng bánh mì hầu như không tăng sau hơn 2500 năm. Áp dụng điều đó ở Việt Nam, giả sử hôm nay một lượng vàng mua được 1.000 tô phở thì 10 hay 30 năm sau nó cũng chỉ mua được 1.000 tô phở. Có lúc vàng tăng giá, có lúc vàng giảm giá rất nhanh (xem giá vàng biến động tại <a href="http://goldprice.org/gold-price-history.html" target='_blank'>Gold Price History</a>), trong khi phở cứ tăng giá từ từ, cuối cùng thì giá vàng quy ra phở gần như không đổi.</p>
@@ -262,32 +245,15 @@ data-ad-slot="3830899615">
   <br>Các tổ chức tài chính đó giữ vàng để <i>đầu cơ</i> chứ họ không giữ vàng hàng chục năm như chị A. <a href="cach-dau-tu">Đầu cơ</a> nghĩa là họ sẽ bán vàng ra khi thị trường khan hiếm vàng và mua vàng vào khi có nhiều người bán. Làm như vậy họ sẽ làm cho vàng sinh lợi. Chị A muốn làm cho vàng sinh lợi cũng phải làm như vậy, nhưng không dễ làm được. Rất nhiều người đã cố đầu cơ vàng nhưng số người thành công không nhiều, đa số không những không lời mà còn lỗ nữa.</p>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h3>Gửi ngân hàng</h3>
   <p>Tóm lại, vàng vẫn chưa đủ tốt để tích luỹ dài hạn. Thứ gì có thể tốt hơn vàng trong việc tích luỹ dài hạn? Thứ đó phải tăng giá trị nhanh hơn tốc độ trượt giá. Thứ đó chính là thứ rất bình thường: <i>sổ tiết kiệm</i> kỳ hạn dài ở các ngân hàng!
@@ -296,32 +262,15 @@ data-ad-slot="3830899615">
   <p>Lãi suất tiết kiệm cao hơn mức trượt giá có 2% mỗi năm (10% - 8%), số tiền chị A cần phải tiết kiệm đã giảm xuống gần một phần năm (41% / 50%). Nếu chị A có cách làm cho tiền sinh lợi cao hơn so với trượt giá nhiều hơn nữa thì có thể để dành ít hơn, chi tiêu nhiều hơn trong hiện tại, việc tiết kiệm sẽ dễ dàng hơn.
   <br><i>Tính toán này có vẻ không giống với thực tế là những người gửi tiền tiết kiệm VND cứ thấy số tiền của mình nhỏ dần đi. Nguyên nhân của sự khác nhau giữa tính toán và thực tế là người gửi tiền tiết kiệm VND thường lấy tiền lãi ra dùng vì thấy nó lẻ, số tiền gốc gửi lại đương nhiên sẽ kém giá trị hơn năm ngoái vì đã bị trượt giá!</i></p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h3>Cổ phiếu</h3>
   <p>Cách làm cho tiền sinh lợi cao hơn tiết kiệm ở ngân hàng chính là hùn vốn vào doanh nghiệp. Các doanh nghiệp hoạt động tốt như Vinamilk, Vietcombank hiện có lợi nhuận hàng năm trên 20%, những doanh nghiệp quy mô gia đình còn có mức lợi nhuận cao hơn nữa. Với lợi nhuận 20% thì chị A chỉ cần để dành 12% thu nhập mỗi tháng mà vẫn đủ sống từ năm 55 tuổi đến năm 85 tuổi. Tuy nhiên nếu chọn cách hùn vốn để sinh lợi thì chị A nên hùn vào nhiều doanh nghiệp trong các ngành khác nhau để giảm bớt rủi ro khi một doanh nghiệp gặp khó khăn.</p>
@@ -334,32 +283,15 @@ data-ad-slot="3830899615">
   <br>Chú ý: quỹ đầu tư không phải là các kiểu đầu cơ vàng và ngoại tệ trên mạng hay rủ rê người ta gửi tiền với lãi suất 3%/tháng, xem thêm bài <a href="cach-dau-tu">Những cách đầu tư</a> để phân biệt.</p>
   <p>Kết quả từ số liệu thực tế hơn 10 năm qua cho thấy <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">lợi nhuận của quỹ đầu tư cao hơn ngân hàng</a>.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 
   <h3>Nhà đất</h3>
@@ -383,32 +315,15 @@ data-ad-slot="3830899615">
     <li>phá sản</li>
   </ol>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2 id="thanh_khoan">Thanh khoản</h2>
   <p>Bàn về tính thanh khoản hay là khả năng chuyển đổi tài sản tích luỹ thành tiền đúng lúc và đúng số lượng cần thiết thì ta có thể xếp theo thứ tự từ cao đến thấp như sau:</p>
@@ -435,32 +350,15 @@ data-ad-slot="3830899615">
   </div>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <hr>
   <div class="footer">
