--- a/huu-ich/tien-thuong-cuoi-nam.html
+++ b/huu-ich/tien-thuong-cuoi-nam.html
@@ -237,32 +237,15 @@ data-ad-slot="5275186684">
     <li>Một số nhân viên chọn thời điểm sau Tết để đổi chỗ làm, doanh nghiệp lại tốn thêm chi phí tuyển và đào tạo nhân viên mới.</li>
   </ul>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Nguyên nhân</h2>
   <ul>
@@ -279,32 +262,15 @@ data-ad-slot="3830899615">
   </ul>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Giải pháp</h2>
   <p>Giải pháp không tốn kém sau đây sẽ đem lại nhiều lợi ích cùng lúc cho doanh nghiệp và người lao động.
@@ -447,32 +413,15 @@ data-ad-slot="3830899615">
   </tbody>
   </table>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Công thức trên khuyến khích người lao động tự chuẩn bị lương hưu cho mình một cách công bằng: người cố gắng tiết kiệm nhiều được thưởng nhiều, trong khi khoản thưởng Tết vẫn tỉ lệ với mức lương. Giả sử mỗi người đều tự đóng vào quỹ hưu trí tự nguyện một khoản bằng lương tháng thì tổng khoản thưởng vào tài khoản hưu trí và khoản thưởng Tết nhận ngay của mỗi người đều là Hệ-số-thưởng * (1 + Hệ-số-tương-lai) * Lương-tháng.
   <br>Người nào có tỉ lệ Tổng-tiền-tự-đóng-trong-năm / Lương-tháng cao hơn thì sẽ nhận vào tài khoản hưu trí nhiều hơn. Trong bảng ví dụ trên chị A lương 4 triệu đồng / tháng, trong suốt năm tự đóng thêm 5 triệu đồng, chị D lương 5 triệu đồng / tháng, trong suốt năm tự đóng thêm 4 triệu đồng, Hệ-số-thưởng cuối năm là 0,1853, Hệ-số-tương-lai là 4 thì chị A được thưởng 4,6325 triệu đồng vào tài khoản hưu trí, chị D được thưởng 2,3718 triệu đồng vào tài khoản hưu trí.
@@ -481,32 +430,15 @@ data-ad-slot="3830899615">
   Tiền trong tài khoản hưu trí tự nguyện sẽ sinh lợi và lãi nhập gốc hàng tháng. Nhân viên chỉ được rút tiền ra khi đến tuổi về hưu hoặc trong những trường hợp đặc biệt như tử vong, mất sức lao động. Do quỹ hưu trí tự nguyện chuyên đầu tư dài hạn và phí quản lý quỹ thấp nên lợi nhuận của quỹ hưu trí tự nguyện tốt hơn lãi tiết kiệm ở một số ngân hàng thương mại lớn.</p>
 
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>Lợi ích</h2>
   <ul>
@@ -525,32 +457,15 @@ data-ad-slot="3830899615">
     <li>Có thể mở rộng phạm vi áp dụng: chuyển một phần hoặc toàn bộ các khoản thưởng khác trong năm vào tài khoản hưu trí tự nguyện.</li>
   </ul>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <h2>So sánh hưu trí tự nguyện với bảo hiểm xã hội bắt buộc</h2>
   <h3>Điểm giống nhau</h3>
