--- a/kinh-nghiem/linh-tinh/tan-so-cua-tv.html
+++ b/kinh-nghiem/linh-tinh/tan-so-cua-tv.html
@@ -231,32 +231,15 @@ data-ad-slot="5275186684">
   Để tiết kiệm băng thông và chi phí, đài truyền hình không phát liên tục tất cả các dòng trong cùng một hình mà phát những dòng lẻ của một hình rồi phát những dòng chẵn của hình đó. TV quét hình theo cách này gọi là quét xen kẽ (interlacing).
   <br>Khi kỹ thuật truyền hình màu phát triển, hầu hết những nước dùng điện 50Hz đều chọn kỹ thuật truyền hình màu PAL (một số chọn kỹ thuật SECAM), hầu hết những nước dùng điện 60Hz đều chọn kỹ thuật NTSC. Do băng thông 6MHz của một kênh truyền hình NTSC chật chội, khi đưa thêm màu vào truyền hình, tần số quét trong NTSC giảm đi một phần ngàn để tránh nhiễu giữa hình và tiếng. Tần số quét trong NTSC thực sự là 59,94Hz nhưng vẫn thường được nói một cách gần đúng là 60Hz <a href="https://www.tvtechnology.com/article/60026" target="_blank">như trước</a>.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>Khoảng hơn 10 năm trước, tiến bộ trong kỹ thuật điện tử cho phép người ta làm ra những TV có thể quét hình nhanh gấp đôi tín hiệu của đài truyền hình, những TV 100Hz ra đời (được gọi là TV 120Hz ở những nước dùng kỹ thuật NTSC).
   Những TV này vẫn nhận tín hiệu 50/60Hz bình thường nhưng nó vẽ mỗi hình lên màn hình hai lần liên tiếp để giảm sự nhấp nháy của hình. Một số TV 100/120Hz gần đây không lặp lại hình hai lần một cách đơn giản mà vẽ ra một hình trung gian giữa hai hình nhận được liên tiếp (Sony gọi là <b>Motionflow</b>, Panasonic gọi là <b>Motion Picture Pro</b>, Samsung gọi là <b>Motion Plus</b>), như vậy thì hình ảnh chuyển động sẽ đẹp hơn.
@@ -266,32 +249,15 @@ data-ad-slot="3830899615">
   Do đó, màn hình Plasma sẽ quét qua các điểm nhiều lần cho mỗi hình, điểm sáng được bật hay tắt trong các lần quét sao cho điểm đó có độ sáng phù hợp với hình cần vẽ. Nhân số lần quét với tần số 60Hz ta sẽ thấy các con số sub-field driving 480, 600, 660, 840 như trên (với 50Hz thì kết quả là 400, 500, 550, 700).
   Như vậy, số sub-field driving càng lớn thì càng có khả năng thể hiện nhiều mức sáng (hay là độ tương phản), số này không thể đem so với tần số quét của TV LCD. (<a href="https://www.avsforum.com/avs-vb/showthread.php?t=1047145" target="_blank">Xem thảo luận</a>)</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
   <p>TV Plasma và LCD thường được dùng để xem phim (từ máy phát đĩa Blue-ray, HTPC, HD player, hay HDTV set-top box). Những phim có nguồn gốc phim nhựa thường có tốc độ 24 hình mỗi giây. Nếu phim được số hoá theo cách tương thích với thiết bị NTSC thì tốc độ chính xác là 23,976 hình mỗi giây, nhưng vẫn được gọi gần đúng là 24. Để xem phim tốt nhất, một số TV có chế độ 24p (quét 24 hình mỗi giây).
   Mặc dù 120 là bội số của 24 nhưng không phải tất cả TV 120Hz đều có chế độ 24p. Cũng giống như có nhiều cách xử lý tín hiệu 50Hz, có nhiều mức độ thực hiện 24p. Mức độ đơn giản nhất là vẽ 24 hình mỗi giây, mức độ cao hơn là lặp lại mỗi hình để vẽ 48 hoặc 96 hình mỗi giây để hình đỡ nhấp nháy, cao nhất là vẽ ra một hoặc ba hình trung gian giữa hai hình liên tiếp để ra 48 hoặc 96 hình khác nhau mỗi giây (Panasonic gọi là <b>24p Smooth Film</b>, Samsung gọi là <b>Cinema Smooth</b>).
