--- a/kinh-nghiem/may-tinh/gnucash.html
+++ b/kinh-nghiem/may-tinh/gnucash.html
@@ -229,32 +229,15 @@ data-ad-slot="5275186684">
 <p>Trong chương trình GnuCash, tôi đã tạo các tài khoản để quản lý các món tiền nằm trong tài khoản thanh toán 312, sổ tiết kiệm ở ngân hàng 314, và tiền mặt trong bóp (ví) 311. Tôi tạo tiếp những tài khoản con có mã tài khoản 11, 12, 13, 15 dưới tài khoản Chi tiêu trong GnuCash để ghi các khoản chi 1, 2, 3, 5 như trong bài <a href="/huu-ich/chi-tieu">Tự do tài chính</a>. Đối với những món tiền để dành lâu năm như khoản 4 và 6 trong bài đó thì cần <a href="/huu-ich/hieu-qua-dau-tu">đánh giá hiệu quả đầu tư</a> nên được ghi vào một file spreadsheet, gọi là <a href="../../huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han">Đầu tư dài hạn</a>.</p>
 <div><amp-img alt="Tài khoản trong GnuCash" src="/images/tai-khoan.png" width="899" height="776" layout="responsive"></amp-img></div>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <p>Tiếp theo tôi tạo ngân sách trong GnuCash cho các khoản chi đó, nhập các số tiền  theo <a href="/huu-ich/ke-hoach-tai-chinh/ke-hoach">tỉ lệ đã định</a> vào trong tab <i>Ngân sách: Ngân sách tháng</i>.</p>
 <div><amp-img alt="Ngân sách trong GnuCash" src="/images/budget.png" width="1058" height="772" layout="responsive"></amp-img></div>
@@ -264,32 +247,15 @@ data-ad-slot="3830899615">
 <p>Thỉnh thoảng, số tiền thực trong bóp lệch một chút so với số trong GnuCash, do các khoản chi vặt không được ghi thì ghi khoản chênh lệch vào tài khoản chi Linh tinh 17.</p>
 <p>Đối với khoản chi 4, đây là khoản chi lớn nên tôi phải rút từ tài sản đầu tư để chi. Giả sử tôi rút từ quỹ đầu tư 15 triệu đồng để mua máy chụp hình giá 13 triệu đồng, 2 triệu đồng còn dư cất vào tài khoản thanh toán, tôi sẽ ghi vào trong file Đầu tư dài hạn rằng rút 15 triệu đồng và ghi trong file Giadinh.gnucash chuyển 13 triệu đồng từ tài khoản con Thu nhập.Đầu tư sang tài khoản Chi tiêu lớn 14 và chuyển 2 triệu đồng từ tài khoản Thu nhập.Đầu tư sang tài khoản thanh toán 312.</p>
 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
 </amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
 
 <p>Với những tài khoản con và ngân sách trong GnuCash như vậy, tôi đã thay thế các hũ hay phong bì chứa các khoản chi theo kế hoạch. Mỗi khi nhìn vào báo cáo tài sản và báo cáo ngân sách của GnuCash tôi có thể thấy ngay mình còn được phép chi bao nhiều cho các khoản 1, 2, 3, 5. Nếu bạn không dùng tài khoản ngân hàng, bạn vẫn có thể dùng GnuCash với những cái hũ hay phong bì của bạn, việc ghi chép GnuCash còn đơn giản hơn nữa, và GnuCash đem lại nhiều lợi ích hơn cho lô hũ/phong bì của bạn, ví dụ như bạn không phải kiểm tiền trong hũ/phong bì mà chỉ cần xem báo cáo của GnuCash.</p>
 <p>GnuCash có rất nhiều kiểu báo cáo để tôi biết tiền mình kiếm được từ đâu, dùng hết bao nhiêu, còn lại bao nhiêu…
